--- a/ch8/ch8-1.md
+++ b/ch8/ch8-1.md
@@ -1,6 +1,6 @@
 # 8.1 设置报警条件
 
-报警与事件的根据报警条件分为“点值超出范围”和“质量不为Good”两种类型报警，用户可以根据具体的需要选择建立相应的报警事件。
+报警与事件的根据报警条件分为“点值超出范围”和“质量不为Good”两种类型报警，用户可以根据具体的需要选择建立相应的报警事件，并且报警事件触发和报警事件恢复记录都会保存下来。
 
 事件编辑步骤如下：
 
