--- a/ch8/ch8-1.md
+++ b/ch8/ch8-1.md
@@ -13,7 +13,7 @@
    - 间隔时间：每隔间隔时间判断一次关联点是否满足事件触发或解除的条件。 
 
    - 关联点名称：可以为I/O点、用户点、计算点和系统点中的其中一个点。 
-   - 最大值、最小值：关联点的值的范围。 
+   - 最大值、最小值：关联点的值的范围，。 
    - 抖动时间：当点值超过范围或质量不为good持续的时间小于抖动延时，此时不触发事件。 
 
 4. 在“当事件触发”的窗体中添加事件触发时写入的点和值； 
