--- a/ch8/ch8-2.md
+++ b/ch8/ch8-2.md
@@ -1,6 +1,6 @@
 # 8.2 查询报警记录
 
-GC或者网关运行工程时，如果触发/解除了事件报警，会将触发/解除的事件保存在数据库当中，可以通过GC查询到报警的详细信息。
+GC或者网关运行工程时，如果触发/解除了事件报警，会将触发/解除的事件保存在数据库当中，在网关设备中数据库最大存储量为数据库文件大小限制为5MB，可以通过GC查询到报警的详细信息。
 
 **查询GC运行产生的报警记录**
 
