--- a/ch9/ch9-2.md
+++ b/ch9/ch9-2.md
@@ -4,46 +4,45 @@ JS 脚本编辑器内置的函数说明如下：
 
 1. 读写函数
 
-- ReadBit从指定Tag点读取BOOL。
+2. ReadBit从指定Tag点读取BOOL。
 
-  语法：var tagValueBit = ReadBit(‘Device1.tag0001’);
+   语法：var tagValueBit = ReadBit\(‘Device1.tag0001’\);
 
-- ReadStatus从指定Tag点读取状态,，返回为字符串，Good为采集成功，Error为采集失败。
+3. ReadStatus从指定Tag点读取状态,，返回为字符串，Good为采集成功，Error为采集失败。
 
-  语法：var tagStatus = ReadStatus(‘Device1.tag0001’);
+   语法：var tagStatus = ReadStatus\(‘Device1.tag0001’\);
 
-- ReadInt从指定Tag点读取整数。
+4. ReadInt从指定Tag点读取整数。
 
-  语法：var tagValueInt = ReadInt(‘Device1.tag0001’);
+   语法：var tagValueInt = ReadInt\(‘Device1.tag0001’\);
 
-- ReadFloat从指定Tag点读取浮点数。
+5. ReadFloat从指定Tag点读取浮点数。
 
-  语法：var tagValueFloat = ReadFloat(‘Device1.tag0001’);
+   语法：var tagValueFloat = ReadFloat\(‘Device1.tag0001’\);
 
-- WriteInt向指定Tag点写入整型。
+6. WriteInt向指定Tag点写入整型。
 
-  语法：
+   语法：
 
-  var value = 10;
+   var value = 10;
 
-  WriteInt(‘Device1.tag0001’， value.toString());
+   WriteInt\(‘Device1.tag0001’， value.toString\(\)\);
 
-- WriteFloat向指定Tag点写入浮点型。
+7. WriteFloat向指定Tag点写入浮点型。
 
-  语法：
+   语法：
 
-  var value = 10;
+   var value = 10;
 
-  WriteFloat(‘Device1.tag0001’， value.toString());
+   WriteFloat\(‘Device1.tag0001’， value.toString\(\)\);
 
-2. 系统函数
+8. 系统函数
 
    Sleep延迟函数，输入参数值为毫秒
 
-   语法：Sleep(1000);
+   语法：Sleep\(1000\);
 
    //延迟等待1000mS
-
 
 
 
