--- a/ch9/ch9-2.md
+++ b/ch9/ch9-2.md
@@ -8,15 +8,15 @@ JS 脚本编辑器内置的函数说明如下：
 
    语法：`var tagValueBit = ReadBit(‘Device1.tag0001’);`
 
-2. ReadStatus从指定Tag点读取状态,，返回为BOOL，True为采集成功，False为采集失败。
+2. ReadStatus从指定Tag点读取状态,，返回为BOOL，True为采集成功，False为采集失败，如果该点不存在或者质量戳不为Good，返回undefined。
 
    语法：`var tagStatus = ReadStatus(‘Device1.tag0001’);`
 
-3. ReadInt从指定Tag点读取整数。
+3. ReadInt从指定Tag点读取整数，如果该点不存在或者质量戳不为Good，返回undefined。
 
    语法：`var tagValueInt = ReadInt(‘Device1.tag0001’);`
 
-4. ReadFloat从指定Tag点读取浮点数。
+4. ReadFloat从指定Tag点读取浮点数，如果该点不存在或者质量戳不为Good，返回undefined。
 
    语法：`var tagValueFloat = ReadFloat(‘Device1.tag0001’);`
 
