--- a/ch9/ch9-2.md
+++ b/ch9/ch9-2.md
@@ -4,11 +4,11 @@ JS 脚本编辑器内置的函数说明如下：
 
 ## 读写函数
 
-1. ReadBit从指定Tag点读取BOOL，输入参数为Tag点名称的字符串，如果该点不存在或者质量戳不为Good，返回undefined。
+1. ReadBit从指定Tag点读取Boolean，输入参数为Tag点名称的字符串，如果该点不存在或者质量戳不为Good，返回undefined。
 
    语法：`var tagValueBit = ReadBit(‘Device1.tag0001’);`
 
-2. ReadStatus从指定Tag点读取状态,，输入参数为Tag点名称的字符串，返回为BOOL，True为采集成功，False为采集失败，如果该点不存在或者质量戳不为Good，返回undefined。
+2. ReadStatus从指定Tag点读取状态,，输入参数为Tag点名称的字符串，返回为Boolean，True为采集成功，False为采集失败，如果该点不存在或者质量戳不为Good，返回undefined。
 
    语法：`var tagStatus = ReadStatus(‘Device1.tag0001’);`
 
@@ -20,7 +20,15 @@ JS 脚本编辑器内置的函数说明如下：
 
    语法：`var tagValueFloat = ReadFloat(‘Device1.tag0001’);`
 
-5. WriteInt向指定Tag点写入整型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值的字符串，无返回值。
+5. WriteBit向指定Tag点写入整型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值的Boolean类型，无返回值。
+
+   语法：
+
+   `var value = true;`
+
+   `WriteBit(‘Device1.tag0001’， value);`
+
+6. WriteInt向指定Tag点写入整型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值的整数类型，无返回值。
 
    语法：
 
@@ -28,7 +36,7 @@ JS 脚本编辑器内置的函数说明如下：
 
    `WriteInt(‘Device1.tag0001’， value.toString());`
 
-6. WriteFloat向指定Tag点写入浮点型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值的字符串，无返回值。
+7. WriteFloat向指定Tag点写入浮点型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值的浮点数类型，无返回值。
 
    语法：
 
