--- a/ch9/ch9-2.md
+++ b/ch9/ch9-2.md
@@ -34,15 +34,15 @@ JS 脚本编辑器内置的函数说明如下：
 
    `var value = 10;`
 
-   `WriteInt(‘Device1.tag0001’， value.toString());`
+   `WriteInt(‘Device1.tag0001’， value);`
 
 7. WriteFloat向指定Tag点写入浮点型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值的浮点数类型，无返回值。
 
    语法：
 
-   `var value = 10;`
+   `var value = 1.23;`
 
-   `WriteFloat(‘Device1.tag0001’， value.toString());`
+   `WriteFloat(‘Device1.tag0001’， value);`
 
 ## 系统函数
 
