--- a/ch9/ch9-2.md
+++ b/ch9/ch9-2.md
@@ -28,7 +28,7 @@ JS 脚本编辑器内置的函数说明如下：
 
    `WriteBit(‘Device1.tag0001’， value);`
 
-6. WriteInt向指定Tag点写入整型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值的整数类型，无返回值。
+6. WriteInt向指定Tag点写入整型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值的JS的Number类型，无返回值。
 
    语法：
 
@@ -36,7 +36,7 @@ JS 脚本编辑器内置的函数说明如下：
 
    `WriteInt(‘Device1.tag0001’， value);`
 
-7. WriteFloat向指定Tag点写入浮点型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值的浮点数类型，无返回值。
+7. WriteFloat向指定Tag点写入浮点型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值的JS的Number，无返回值。
 
    语法：
 
