--- a/ch9/ch9-2.md
+++ b/ch9/ch9-2.md
@@ -20,7 +20,7 @@ JS 脚本编辑器内置的函数说明如下：
 
    语法：`var tagValueFloat = ReadFloat(‘Device1.tag0001’);`
 
-5. WriteBit向指定Tag点写入整型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值的Boolean类型，无返回值。
+5. WriteBit向指定Tag点写入整型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值JS的Boolean类型，无返回值。
 
    语法：
 
