--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -84,15 +84,34 @@
 
 - 离线数据发布的主题：网关在mqtt断线时，会根据上传的频率把数据存储在网关当中，在mqtt重连成功时会向离线数据的主题依次发送存储的数据。目前网关设备存储离线数据的容量为20M，当离线数据大于20M时，网关就会在存储新的离线数据时删除最早的离线数据。 查询数据的主题：在mqtt配置界面中“查询数据订阅的主题”一项输入需要订阅的主题，通过在mqtt服务器该主题上发布如下所示的格式的数据，即可实现查询数据的操作，网关会通过配置界面中“查询数据发布的主题”发布此次查询到的数据。 
 
-  {"operate":"read","devices":[{"deviceCode":"Device_1","tags":null}, 
+  
 
-  {"deviceCode":"Device_2","tags":[{"tagCode":"tag0008"}]}]} 
+```
+{"operate":"read","devices":[
+  {"deviceCode":"Device_1","tags":null}, 
+  {"deviceCode":"Device_2","tags":[{"tagCode":"tag0008"}]}
+  ]
+} 
+```
+
+
 
 - 推送事件的主题：如果在“报警与事件”(1.12章节)当中配置了报警事件，当报警事件触发或者解除时网关设 备会保存该事件并且会通过推送事件的主题将该事件发布到云服务器。 
 
 - 控制操作的主题：在mqtt配置界面中“写操作订阅的主题”一项输入需要订阅的主题，通过在mqtt服务器该主题上发布如下所示格式的数据，即可实现写入数据的操作。 
 
-  [{"operate":"write","deviceCode":"Device_1","tagCode":"tag0001", "val":"10"}] 
+ 
+
+```
+ [
+   {
+     "operate":"write","deviceCode":"Device_1",
+     "tagCode":"tag0001", "val":"10"
+   }
+ ] 
+
+```
+
 
   deviceCode：采集协议页面中的设备名称, 
 
@@ -102,7 +121,7 @@
 
 - 重启网关的主题：在mqtt配置界面中“重启网关订阅的主题”一项输入需要订阅的主题，通过在mqtt服务器 该主题上发布如下所示的格式的数据，即可实现重启网关的操作。 
 
-​       {"operate":"reboot"}
+​      ` {"operate":"reboot"}`
 
 - 配置网关的主题：通过云服务器将配置工具配置生成的数据库配置文件转换成二进制发布到配置网关的主题当中，实现远程配置网关。 
 
