--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -2,7 +2,7 @@
 
 可用于配置与Mqtt服务器的连接。用户可以在Mqtt Client页面配置设备，让设备将tag点信息上传到IoT中心，同时支持不同主题、不同频率的上传。 
 
-用户需要配置IoT中心连接属性、发布订阅的主题、需要上传的tag点等属性。 
+用户需要配置IoT中心连接属性、发布订阅的主题、需要上传的tag点等。 
 
 ## 6.1.1 基础连接属性
 
