--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -7,8 +7,8 @@
 ## 6.1.1 基础连接属性
 
 - 启用云服务，启用后网关设备才会进行MQTT的连接； 
-- IP地址/域名、端口：网关设备需要连接的服务器的IP和端口号； 
-- ClientID：客户端唯一标识，同一时间内 Server 和同一个 ClientID 只能保持一个 TCP 连接，再次连接会踢掉前一个。 
+- IP地址/域名、端口：网关设备需要连接的MQTT broker服务器的IP和端口号（默认1883）； 
+- ClientID：客户端唯一标识，同一时间内 Server 和同一个 ClientID 只能保持一个 TCP 连接，如果重复ClientID连接会踢掉前一个。 
 
 ![6-1 mqtt基础连接属性](assets/6-1 mqtt基础连接属性.png)
 
