--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -18,9 +18,9 @@
 
 ## 6.1.2 进阶连接属性
 
-1. Gerenal 
+1. 基本配置（Gerenal） 
 
-   -Keep Alive(s)：心跳，客户端在Connect的时候设置 Keep Alive 时长。如果服务端在 1.5 * KeepAlive 时间内没有收到客户端的报文，它必须断开客户端的网络连接，默认为60秒。 
+   - Keep Alive(s)：心跳，客户端在Connect的时候设置 Keep Alive 时长。如果服务端在 1.5 * KeepAlive 时间内没有收到客户端的报文，它必须断开客户端的网络连接，默认为60秒。 
 
    - Timeout(s)：定义客户端发送信息到云端响应的最大时间间隔，客户端超过时间没有得到相应后会主动中断连接，默认为30秒。 
 
