--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -34,7 +34,7 @@
 
 <center>图6-2 mqtt Gerenal </center>
 
-2. User Credentials
+2. 登录凭证（User Credentials）
 
    用户名和密码：根据服务器的配置来确定在mqtt连接时是否需要经过用户名和密码的验证。
 
