--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -42,7 +42,7 @@
 
    <center>图6-3 mqtt User Credentials </center>
 
-3. SST/TLS
+3. 通信加密（SST/TLS）
 
    默认为不启用SSL安全连接，用户需要启用SSL时可以选择两种方式： 
 
@@ -54,7 +54,7 @@
 
 <center>图6-4 mqtt User SSL/TLS </center>
 
-4. Last Will and Testament
+4. 遗嘱配置（Last Will and Testament）
 
    默认不启用遗嘱，遗嘱是当网络连接关闭时，服务端必须发布这个遗嘱消息，所以被形象地称之为遗嘱， 
 
