--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -56,7 +56,7 @@
 
 4. 遗嘱配置（Last Will and Testament）
 
-   默认不启用遗嘱，遗嘱是当网络连接关闭时，服务端必须发布这个遗嘱消息，所以被形象地称之为遗嘱， 
+   默认不启用遗嘱，遗嘱是当网络连接关闭时，客户端必须发布这个遗嘱消息，所以被形象地称之为遗嘱， 
 
    可用于通知异常断线。启用遗嘱时需要设置遗嘱主题和遗嘱内容。
 
@@ -87,7 +87,11 @@
 ```
 {"operate":"read","devices":[
   {"deviceCode":"Device_1","tags":null}, 
-  {"deviceCode":"Device_2","tags":[{"tagCode":"tag0008"}]}
+  {"deviceCode":"Device_2",
+  "tags":[
+        {"tagCode":"tag0008"}
+      ]
+    }
   ]
 } 
 ```
