--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -119,7 +119,7 @@
 
   tagCode：数据点的名称； 
 
-  val：需要写入的数值。 
+  val：需要写入的数值，字符串类型。 
 
 - 重启网关的主题：在mqtt配置界面中“重启网关订阅的主题”一项输入需要订阅的主题，通过在mqtt服务器 该主题上发布如下所示的格式的数据，即可实现重启网关的操作。 
 
