--- a/ch3/ch3-3.md
+++ b/ch3/ch3-3.md
@@ -4,7 +4,7 @@
 
 1. 单击工程树上的“用户点”节点。 
 2. 点击“添加”按钮新增一个用户点。 
-3. 输入用户点配置页面中唯一的名称，选择点类型，添加该点的默认值。 
+3. 输入用户点配置页面中唯一的名称，选择点类型（开关量或者模拟量），添加该点的默认值。 
 4. 点击“保存”完成添加点。 
 
 具体步骤如图3-5所示。
