第二次修改

--- a/ch3/ch3-3.md
+++ b/ch3/ch3-3.md
@@ -13,3 +13,9 @@
 
 <center>图3-5 添加用户点</center>
 
+表格中各列的说明如下：
+
+- 名称：必填项可修改，在此页面中不能重复，为该点的唯一标识，如上图中名称为tag0001，在工程中该点的标识为user.tag0001
+- 描述：选填项，该点的描述信息
+- 数据类型：分为Analog(模拟量)和Discrete(离散量)
+- 默认值：工程运行是该点的起始默认值，当数据类型为Analog时可填任意数，当数据类型为Discrete时只能填0或1
