--- a/ch3/ch3-5.md
+++ b/ch3/ch3-5.md
@@ -1,8 +1,29 @@
 # 3.4 系统点
 
-系统点保存网关的时间信息和通道下设备与网关的通讯状态，在I/O点中新建设备后，系统点页面会自动添加该 设备的系统点，服务协议也可以把系统点映射到自身服务当中。页面如图3-7所示。 
+系统点保存网关的时间信息和通道下设备与网关的通讯状态，在I/O点中新建设备后，系统点页面会自动添加该 设备的系统点，服务协议也可以把系统点映射到自身服务当中。页面如图3-8所示。 
 
 ![3-7 系统点](assets/3-7 系统点.png)
 
-<center>图3-7 系统点</center>
+<center>图3-8 系统点</center>
 
+**默认拥有的系统点：**
+
+TIME_SECOND：系统当前时间中的秒数
+
+TIME_MINUTE：系统当前时间中的分数
+
+TIME_HOUR：系统当前时间中的小时
+
+TIME_DAY：系统当前时间中的天
+
+TIME_MONTH：系统当前时间中的月份
+
+TIME_YEAR：系统当前时间中的年份
+
+TIME_WDAY：系统当前时间中星期几
+
+
+
+**设备状态点**：
+
+Device1_status：在I/O点中新建设备后，系统点页面会自动添加该 设备的系统点。其中“Device1”为设备名称，当实时数据中该点的值为1，说明该设备下的所有数据点都采集成功；当实时数据中该点的值为0，说明该设备下有一个或多个数据点采集失败
