--- a/ch5/ch5-1.md
+++ b/ch5/ch5-1.md
@@ -15,13 +15,23 @@ Modbus TCP和Modbus RTU通用参数如下：
 
 端口号：设置Modbus TCP侦听端口号，默认值是502。 
 
+![TCP配置](assets/TCP配置.png)
+
 **Modbus RTU配置** 
 
-通过使能Modbus RTU服务，在点击“配置”按钮弹出的对话框中指定Modbus RTU服务的串口和相应的串口配 置，即可允许上位机通过Modbus RTU协议经由串口连接（RS-232/485)或者虚拟串口连接来访问设备。 
+通过使能Modbus RTU服务，在点击“配置”按钮弹出的对话框中添加指定串口提供Modbus RTU服务，即可允许上位机通过Modbus RTU协议经由串口连接（RS-232/485)来访问设备。  
+
+![RTU配置](assets/RTU配置.png)
 
 **Modbus DTU配置** 
 
 通过使能Modbus DTU服务，即可允许网关先通过填写的服务器地址和端口连接服务器，然后向服务器提供 modbus服务功能，服务器能读写网关内的Tag点。 
+
+![DTU配置](assets/DTU配置.png)
+
+报文格式：指定以什么格式的报文进行交互。
+
+心跳包ID：
 
 **Modbus地址映射** 
 
