--- a/ch1/ch1-1.md
+++ b/ch1/ch1-1.md
@@ -6,9 +6,31 @@
 
 <center>图1-1 新建工程</center>
 
-工程新建完成以后，在“工程管理”窗口就可以看到相应的新工程文件，如图1-2所示。
+工程新建完成以后，会在左侧工程树中显示新建工程的名称作为根节点，之后的工程配置都在此处进行，如图1-2所示。
 
 ![1-2 新建工程完成](assets/1-2 新建工程完成.png)
 
 <center>图1-2 新建工程完成</center>
+
+
+
+**添加网关设备**
+
+单击选中工程树中工程名称节点，右键单击选择“添加网关设备”，自定义网关名称和备注，选择网关分类和网关型号，具体操作如图1-3所示。 
+
+<font color=red size=3>注意：下载工程到网关时会进行网关型号的验证。</font>
+
+<font color=blue size=3>提示：网关的侧标签有网关型号、网关版本和默认IP等信息。</font>
+
+![1-3 添加网关设备](assets/1-3 添加网关设备.png)
+
+<center>图1-3 添加网关设备</center>
+
+
+
+网关设备添加完成以后，在工程名称节点下就会根据网关型号的不同显示相应的工程树，如图1-4所示。
+
+![1-4 添加网关设备完成](assets/1-4 添加网关设备完成.png)
+
+<center>图1-4 添加网关设备完成</center>
 
