--- a/ch3/ch3-4.md
+++ b/ch3/ch3-4.md
@@ -19,3 +19,15 @@
 
 <center>图3-6 添加计算点</center>
 
+
+
+**表达式检查**
+
+表达式设置界面中有一个计算器样式的按钮![calculator](assets/calculator.png)，点击它可以打开表达式检查器，如下图所示。表达式检查器的界面与表达式设置界面大致相同，但右边多了一个计算按钮及计算结果的显示 框。另外，与表达式设置界面不同的是，表达式检查器的变量输入框中需要的是变量数值而不是Tag点名称
+
+要验证表达式是否正确，可以通过点击计算按钮![dengyu](assets/dengyu.png) 来得到计算结果，然后通过检查计算结果可以直观地验证表达式的正确性。当表达式验证完毕后，点击确认按钮即可将表达式更新到表达式设置界面中，如果不想将表达式更新到表达式设置界面，则按取消即可。
+
+![3-7 表达式检查](assets/3-7 表达式检查.png)
+
+<center>图3-7 表达式检查</center>
+
