--- a/ch2/ch2-1.md
+++ b/ch2/ch2-1.md
@@ -1,22 +1,30 @@
-# 2.1 添加网关设备
+# 2.1 添加、搜索、查看网关
 
-打开新建的工程之后，就可进行具体的网关配置。 
+**添加网关** 
 
-单击选中工程树中工程名称节点，右键单击选择“添加网关设备”，自定义网关名称和备注，选择网关分类和网关型号，具体操作如图2-1所示。 
+已知LMGateway的IP地址，点击“添加设备”将网关添加到在线网关列表中。 
 
-<font color=red size=3>注意：下载工程到网关时会进行网关型号的验证。</font>
+![2-3 添加网关](assets/2-3 添加网关.png)
 
-<font color=blue size=3>提示：网关的侧标签有网关型号、网关版本和默认IP等信息。</font>
-
-![2-1 添加网关设备](assets/2-1 添加网关设备.png)
-
-<center>图2-1 添加网关设备</center>
+<center>图2-3 添加网关</center>
 
 
 
-网关设备添加完成以后，在工程名称节点下就会根据网关型号的不同显示相应的工程树，如图2-1所示。
+**搜索网关** 
 
-![2-1 添加网关设备完成](assets/2-2 添加网关设备完成.png)
+将网络中的LMGateway全部搜索并列到在线网关列表中。
 
-<center>图2-2 添加网关设备完成</center>
+![2-4 搜索网关](assets/2-4 搜索网关.png)
+
+<center>图2-4 搜索网关</center>
+
+
+
+**查看网关信息** 
+
+双击网关IP，弹出窗口中包含网关的硬件版本、软件版本、支持点数和SN号，其中支持点数是指网关中的数据点低于支持点数时可以保证网关的运行效率。
+
+![2-5 网关信息](assets/2-5 网关信息.png)
+
+<center>图2-5 查看网关信息</center>
 
