--- a/ch2/ch2-2.md
+++ b/ch2/ch2-2.md
@@ -1,30 +1,28 @@
-# 2.2 添加、搜索、查看网关
+# 2.3 实时数据、设置Tag点值
 
-**添加网关** 
+**查看实时数据**
 
-如果你知道网络中LMGateway的IP地址，那么你可以通过添加设备的方式将此设置添加到在线设备列表中。 
+GC具有监控LMGateway数据的功能，单击网关IP，右侧显示通过 HTTP接口查询到的所有实时数据，可以通过单击左侧节点查看该节点下的数据。 
 
-![2-3 添加网关](assets/2-3 添加网关.png)
+![2-6 实时数据](assets/2-6 实时数据.png)
 
-<center>图2-3 添加网关</center>
+<center>图2-6 实时数据</center>
 
+实时数据分为名称、value、quality、采集时间，分别如下：
 
-
-**搜索网关** 
-
-将网络中的LMGateway全部搜索并列到Online gateway列表中。
-
-![2-4 搜索网关](assets/2-4 搜索网关.png)
-
-<center>图2-4 搜索网关</center>
+- 名称：Tag点在当前LMGateway中的唯一标识。
+- value：此时Tag点的实时值。
+- quality：Tag点的质量戳，Good表示采集成功，此时value显示采集到的值；Error为采集失败，此时value显示为空。
 
 
 
-**查看网关信息** 
+**设置Tag点值**
 
-双击需要查看信息的网关IP，在弹出的窗口中包含网关的硬件版本、软件版本、支持点数和SN号，其中支持点数是指网关中的数据点低于支持点数时可以保证网关的运行效率。
+GC可以对网关的数据点进行写操作。 
 
-![2-5 网关信息](assets/2-5 网关信息.png)
+在实时数据页面，单击Tag点的value字段，在弹出的窗口中输入需要写入的值，点击“写入”按钮。
 
-<center>图2-5 查看网关信息</center>
+![2-7 设置Tag点](assets/2-7 设置Tag点.png)
+
+<center>图2-7 设置Tag点值</center>
 
