--- a/ch2/ch2-3.md
+++ b/ch2/ch2-3.md
@@ -1,28 +1,85 @@
-# 2.3 实时数据、设置Tag点值
+# 2.4 系统设置
 
-**查看实时数据**
+## 2.4.1 设置IP
 
-Gateway Confifiguration具有监控LMGateway数据的功能，单击需要监控的网关的IP，就会在右侧显示通过 HTTP接口查询到的所有实时数据，可以通过点击左侧的通道设备树节点来查看单一的通道或者设备的数据。 
+用户可以通过GC修改在线LMGateway网口的网络参数。 
 
-![2-6 实时数据](assets/2-6 实时数据.png)
+点击“应用到网关”按钮，网关立即生效。（网口支持DHCP）
 
-<center>图2-6 实时数据</center>
+![2-8 设置IP](assets/2-8 设置IP.png)
 
-实时数据分为名称、value、quality、采集时间，分别如下：
-
-- 名称：Tag点在当前LMGateway中的唯一标识。
-- value：此时Tag点的实时值。
-- quality：Tag点的质量戳，Good表示采集成功，此时value显示采集到的值；Error为采集失败，此时value显示为空。
+<center>图2-8 设置IP</center>
 
 
 
-**设置Tag点值**
 
-Gateway Confifiguration可以通过HTTP协议对网关下面的采集设备进行写操作。 
+## 2.4.2 上传工程
 
-在实时数据页面，单击需要写入的Tag点的value，在弹出的窗口中输入需要写入的value，之后点击“写入”按 钮。
+GC可以将当前网关的配置文件上传到本地。 
 
-![2-7 设置Tag点](assets/2-7 设置Tag点.png)
+点击“上传工程”，工程文件会上传至GC安装目录的Project文件夹下。
 
-<center>图2-7 设置Tag点值</center>
+如果当前网关使用了密码，在上传工程时需要用户输入密码，才能进行上传工程的操作。
+
+![2-9 上载工程](assets/2-9 上载工程.png)
+
+<center>图2-9 上传工程</center>
+
+
+上传工程成功后GC会自动打开上传的工程。
+
+
+
+## 2.4.3 密码设定
+
+LMGateway出厂默认密码为空，即不使用密码。用户出于安全考虑可以给网关设置密码，用于工程的上传与下载。
+
+![2-10 密码设定](assets/2-10 密码设定.png)
+
+<center>图2-10 密码设定</center>
+
+
+
+## 2.4.4 网关校时
+
+用户可将LMGateway与时间源同步时间，也可以将LMGateway作为一个NTP服务器，同步给其他设备。
+
+- 网关根据同步周期与NTP服务器同步时间 
+- 将网关设置为一个时间同步源，其他设备可以与这台网关同步时间
+
+![2-11 网关校时](assets/2-11 网关校时.png)
+
+<center>图2-11 网关校时</center>
+
+
+如果只需要将网关时间与电脑时间同步，只需要点击“与电脑时间同步”按钮； 
+
+如果需要设置上图中的1、2，设置好之后需要点击“设置网关”按钮。 
+
+
+
+## 2.4.5 重启网关
+
+GC对网关进行重启。
+
+![2-12 重启网关](assets/2-12 重启网关.png)
+
+<center>图2-12 重启网关</center>
+
+
+
+
+## 2.4.6 网关升级
+
+建议用户不要随意点击，需要进行网关升级时请先联系厂家。 
+
+在升级过程中请不要操作GC和网关，在升级结束时会在系统日志中输出相应的信息。
+
+![2-13 网关升级](assets/2-13 网关升级.png)
+
+<center>图2-13 网关升级</center>
+
+
+
+
 
