--- a/ch3/ch3-3.md
+++ b/ch3/ch3-3.md
@@ -1,10 +1,12 @@
 # 3.3 用户点
 
-前面部分讲到实际数据采集I/O点的配置，但工程部署中还需要一些非实际I/O的点，这些点是用户可选可配，即用户点，这些用户点可用于JavaScript编程，可作为一个控制信号，也可作为一个运算结果的呈现。 
+用户点属于可读可写的内部点。
+
+可用于JavaScript编程、作为一个控制信号等。 
 
 1. 单击工程树上的“用户点”节点。 
 2. 点击“添加”按钮新增一个用户点。 
-3. 输入用户点配置页面中唯一的名称，选择点类型（开关量或者模拟量），添加该点的默认值。 
+3. 输入配置页面中唯一的名称，选择点类型（模拟量和离散量），添加该点的默认值。 
 4. 点击“保存”完成添加点。 
 
 具体步骤如图3-5所示。
@@ -13,9 +15,9 @@
 
 <center>图3-5 添加用户点</center>
 
-表格中各列的说明如下：
+表格中各字段说明如下：
 
-- 名称：必填项可修改，在此页面中不能重复，为该点的唯一标识，如上图中名称为tag0001，在工程中该点的标识为user.tag0001
+- 名称：必填项，可修改。在此页面中不能重复，为该点的唯一标识，如上图中名称为tag0001，在工程中该点的标识为user.tag0001
 - 描述：选填项，该点的描述信息
 - 数据类型：分为Analog(模拟量)和Discrete(离散量)
-- 默认值：工程运行是该点的起始默认值，当数据类型为Analog时可填任意数，当数据类型为Discrete时只能填0或1
+- 默认值：工程运行时该点的默认值，当数据类型为Analog时可填任意数，当数据类型为Discrete时只能填0或1
