--- a/ch3/ch3-5.md
+++ b/ch3/ch3-5.md
@@ -1,6 +1,8 @@
 # 3.4 系统点
 
-系统点保存网关的时间信息和通道下设备与网关的通讯状态，在I/O点中新建设备后，系统点页面会自动添加该 设备的系统点，服务协议也可以把系统点映射到自身服务当中。页面如图3-8所示。 
+系统点是只读的内部点，提供了网关的时间信息、网关与设备的通讯状态。
+
+在I/O点中新建设备后，系统点页面会自动添加该设备的状态点，如图3-8所示。 
 
 ![3-7 系统点](assets/3-7 系统点.png)
 
@@ -8,22 +10,22 @@
 
 **默认拥有的系统点：**
 
-TIME_SECOND：系统当前时间中的秒数
+TIME_SECOND：系统时间中的秒值，在工程中该点的标识为system.TIME_SECOND
 
-TIME_MINUTE：系统当前时间中的分数
+TIME_MINUTE：系统时间中的分值，在工程中该点的标识为system.TIME_MINUTE
 
-TIME_HOUR：系统当前时间中的小时
+TIME_HOUR：系统时间中的小时值，在工程中该点的标识为system.TIME_HOUR
 
-TIME_DAY：系统当前时间中的天
+TIME_DAY：系统时间中几号，在工程中该点的标识为system.TIME_DAY
 
-TIME_MONTH：系统当前时间中的月份
+TIME_MONTH：系统时间中几月，在工程中该点的标识为system.TIME_MONTH
 
-TIME_YEAR：系统当前时间中的年份
+TIME_YEAR：系统时间中的年，在工程中该点的标识为system.TIME_YEAR
 
-TIME_WDAY：系统当前时间中星期几
+TIME_WDAY：系统时间中星期几，在工程中该点的标识为system.TIME_WDAY
 
 
 
 **设备状态点**：
 
-Device1_status：在I/O点中新建设备后，系统点页面会自动添加该 设备的系统点。其中“Device1”为设备名称，当实时数据中该点的值为1，说明该设备下的所有数据点都采集成功；当实时数据中该点的值为0，说明该设备下有一个或多个数据点采集失败
+Device1_status：在I/O点中新建设备后，系统点页面会自动添加该设备的状态点。其中“Device1”为设备名称，该设备下的所有数据点中有任意一个采集成功，则该设备的状态点值为1 ；该设备下的所有数据点均采集失败，则该设备的状态点值为0。
