--- a/ch4/ch4-1.md
+++ b/ch4/ch4-1.md
@@ -13,5 +13,7 @@
 
 <center>图4-1 数据存储配置</center>
 
-LMGateway网关的数据存储只能存储到TF卡当中，GC软件的数据存储会存储在安装目录的history文件夹。
+LMGateway网关的数据存储只能存储到TF卡当中。
+
+GC运行工程时数据库文件存储在安装目录的history文件夹。
 
