--- a/ch2/ch2-4.md
+++ b/ch2/ch2-4.md
@@ -1,93 +1,38 @@
-# 2.4 系统设置
+# 2.5 调试模式
 
-## 2.4.1 设置IP
+用户通过点击工具栏中的“调试模式”按钮进入网关调试。 
 
-用户可以通过Gateway Confifiguration修改在线LMGateway网口的IP地址和DNS，也可以设置网口为DHCP。 
-
-点击“应用到网关”按钮之后，网关会马上应用当前配置的IP。
-
-![2-8 设置IP](assets/2-8 设置IP.png)
-
-<center>图2-8 设置IP</center>
+GC的调试模式分为三部分：网关数据采集日志和报文输出、网关Ping测试、网关串口测试。 
 
 
 
+## 2.5.1 网关数据采集日志和报文输出
 
-## 2.4.2 上载工程
+用户可以查看网关运行日志及网关与设备交互的报文。
 
-Gateway Confifiguration可以将当前网关的配置文件上载到本地。 
+![2-14 网关数据采集日志和报文输出](assets/2-14 网关数据采集日志和报文输出.png)
 
-点击“上载工程”时，为防止工程被他人上载，如果当前网关使用了密码，在上载工程时会需要用户输入密码之后才能进行上载工程的操作。
-
-![2-9 上载工程](assets/2-9 上载工程.png)
-
-<center>图2-9 上载工程</center>
+<center>图2-14 网关数据采集日志和报文输出</center>
 
 
 
+## 2.5.2 Ping测试
 
-上载工程成功后GC会自动打开上载的工程。
+用户输入目标IP，点击“确定”按钮即可使网关对目标IP进行ping操作。(默认进行5次ping操作)。
 
+点击“调试”选项卡或者重启网关恢复正常采集、服务。
 
+![2-15 ping测试](assets/2-15 ping测试.png)
 
-## 2.4.3 密码设定
-
-LMGateway网关出厂默认没有设置密码，用户出于安全的考虑可以给网关设置密码，密码需要用户自己记录。
-
-![2-10 密码设定](assets/2-10 密码设定.png)
-
-<center>图2-10 密码设定</center>
+<center>图2-15 Ping测试</center>
 
 
 
+## 2.5.3 串口测试
 
+用户可以通过串口测试，设置网关串口，发送下方文本框中编辑的16进制报文，验证串口参数设置，查看报文收发。
 
+![2-16 串口测试](assets/2-16 串口测试.png)
 
-## 2.4.4 网关校时
-
-- 使网关根据设定的周期与NTP服务器同步时间 
-- 将网关时间同步成电脑时间 
-- 将网关设置为一个时间同步源，其他设备可以与这台网关同步时间
-
-![2-11 网关校时](assets/2-11 网关校时.png)
-
-<center>图2-11 网关校时</center>
-
-
-
-
-如果只需要将网关时间与电脑时间同步，只需要点击“与电脑时间同步”按钮； 
-
-如果需要设置上图中的1、2，设置好之后需要点击“设置网关”按钮。 
-
-
-
-## 2.4.5 重启网关
-
-Gateway Confifiguration可以通过HTTP接口对网关进行重启。
-
-![2-12 重启网关](assets/2-12 重启网关.png)
-
-<center>图2-12 重启网关</center>
-
-
-
-
-
-
-
-
-## 2.4.6 网关升级
-
-建议用户不要随意点击，需要进行网关升级时请先联系厂家。 
-
-在升级过程中请不要操作Gateway Confifiguration和网关，在升级结束时会在系统日志中输出相应的信息。
-
-![2-13 网关升级](assets/2-13 网关升级.png)
-
-<center>图2-13 网关升级</center>
-
-
-
-
+<center>图2-16 串口测试</center>
 
