--- a/ch3/ch3-2.md
+++ b/ch3/ch3-2.md
@@ -17,7 +17,7 @@
 
 ## 3.2.2 批量复制新增
 
-同一个通道下的设备具有相同的协议属性，我们可以选中已编辑好的设备，右键“批量复制新增”，在弹出框中点击“+”按钮，编辑新设备的设备名称，设备地址。这个操作可以快速编辑完成一个通道下的若干设备。如图2-4所示。
+同一个通道下的设备具有相同的协议属性，可以选中已编辑好的设备，右键“批量复制新增”，在弹出框中点击“+”按钮，编辑新设备的设备名称，设备地址。这个操作可以快速编辑完成一个通道下的若干设备。如图3-4所示。
 
 ![3-4 批量复制新增](assets/3-4 批量复制新增.png)
 
@@ -27,15 +27,9 @@
 
 ## 3.2.3 编辑点表
 
-单击左侧工程树中的设备，进入设备采集点表编辑页面，我们根据协议种类不同分别编辑了一下页面
+单击左侧工程树中的设备，进入设备采集点表编辑页面。如下图所示。
 
-[Modbus采集点表](Protocol/Modbus.md)
+![modbusTag点示例](assets/modbusTag点示例.png)
 
-[DLT采集点表](Protocol/DLT.md)
-
-[CJ188采集点表](Protocol/CJ188.md)
-
-[BACnet采集点表](Protocol/BACnet.md)
-
-[PLC采集点表](Protocol/PLC.md)
+<center>modbusTag点示例</center>
 
