--- a/ch3/ch3-4.md
+++ b/ch3/ch3-4.md
@@ -1,14 +1,16 @@
 # 3.4 计算点
 
-计算点是一种特殊的Tag点，它的值是某个表达式的计算结果，该表达式的参数可以是Tag点或常数，在表达式中 可以使用一些常用的计算方法，包括四则运算，逻辑运算，三角函数等。 
+用户点属于只读的内部点，它的值是某个表达式的计算结果。
 
-通过使用计算点，可以做一些相对复杂的计算，例如将采集到的传感器数值通过换算得到实际的物理量（如液 位、风速等），这样可以减少上位机的运算量，也使得设备更加智能化。 
+该表达式的参数可以是Tag点或常数，在表达式中可以使用一些常用的计算方法，包括四则运算，逻辑运算，三角函数等。 
+
+通过使用计算点，可以做一些相对复杂的计算，例如将采集到的传感器数值通过换算得到实际的物理量，这样可以减少上位机的运算量，也使得设备更加智能化。 
 
 每个计算点对应一个表达式，表达式可以有最多4个Tag点作为输入变量，为了方便起见，4个Tag点在表达式中分别使用A，B，C，D来表示。操作步骤如下： 
 
 1. 单击工程树上的“计算点”节点。 
 2. 点击“添加”按钮新增一个计算点。 
-3. 输入计算点配置页面中唯一的名称。 
+3. 输入配置页面中唯一的名称，如下图名称为tag0001，在工程中该点的标识为calculate.tag0001。
 4. 输入计算表达式，表达式中可使用的预设函数或运算符可以从表达式输入框上方的几个下拉框中选择，也 可以手动输入预设的函数或运算符。 
 5. 单击表达式变量的输入框左侧添加按钮，选择该变量对应的Tag点。 
 6. 点击“确定”完成添加点。 
@@ -21,11 +23,9 @@
 
 
 
-**表达式检查**
+**表达式验证**
 
-表达式设置界面中有一个计算器样式的按钮![calculator](assets/calculator.png)，点击它可以打开表达式检查器，如下图所示。表达式检查器的界面与表达式设置界面大致相同，但右边多了一个计算按钮及计算结果的显示 框。另外，与表达式设置界面不同的是，表达式检查器的变量输入框中需要的是变量数值而不是Tag点名称
-
-要验证表达式是否正确，可以通过点击计算按钮![dengyu](assets/dengyu.png) 来得到计算结果，然后通过检查计算结果可以直观地验证表达式的正确性。当表达式验证完毕后，点击确认按钮即可将表达式更新到表达式设置界面中，如果不想将表达式更新到表达式设置界面，则按取消即可。
+界面中有一个计算器样式的按钮![calculator](assets/calculator.png)，点击它可以打开表达式检查器，如下图所示。表达式检查器中A、B、C、D均已赋值。点击计算按钮![dengyu](assets/dengyu.png) 得到计算结果，直观地验证表达式是否正确。
 
 ![3-7 表达式检查](assets/3-7 表达式检查.png)
 
