--- a/ch4/ch4-3.md
+++ b/ch4/ch4-3.md
@@ -1,6 +1,7 @@
-# 4.3 历史上传
+# 4.3 获取历史数据
 
-LMGateway网关数据存储功能所存储的历史数据在TF卡当中，会在TF卡中新建一个history文件夹，每天会在文件夹中新增一个数据库文件，用户可以通过对网关断电，然后取出TF卡，或者直接通过GC软件获取到历史数据存储的文件夹上传到本地电脑，最后用sqlite工具软件打开上传的数据库文件。
+- 网关断电，取出TF卡获取数据库文件
+- 通过GC将数据库文件上传到本地电脑
 
 ![4-3 历史上传](assets/4-3 历史上传.png)
 
