--- a/ch5/ch5-1.md
+++ b/ch5/ch5-1.md
@@ -102,6 +102,8 @@ Modbus TCP和Modbus RTU通用参数如下：
 
    ![modbus示例图2](assets/modbus示例图2.png)![modbus示例图3](assets/modbus示例图3.png)
 
-4. 如果此时页面上显示“No connection”，说明没有连接上LMGateway的ModbusTCP服务，请检查通讯配置；如果没有显示“No connection”，说明已经连接上LMGateway的ModbusTCP服务，根据GC中Modbus服务页面的映射地址、数据类型和字节序修改Modbus Poll软件工具栏中“Display”。
+4. 根据GC中Modbus服务页面的映射地址、数据类型和字节序修改Modbus Poll软件工具栏中“Display”，查看寄存器数据。
 
    ![modbus示例图4](assets/modbus示例图4.png)
+
+如果此时页面上显示“No connection”，说明没有连接上LMGateway的ModbusTCP服务，请检查通讯配置。
