--- a/ch5/ch5-3.md
+++ b/ch5/ch5-3.md
@@ -1,10 +1,12 @@
 # 5.3 OPC UA
 
-用户通过勾选"启用"和修改端口号来启动OPC UA服务。 
+OPC UA服务器实现了Tag点到对象属性的映射，允许上位机通过 OPC UA协议读写Tag点。 
 
-**OPC UA地址映射** 
+端口号：设置OPC UA侦听端口号，默认值是4840。 
 
-为了OPC UA客户端可以访问到设备上的Tag点，需要将Tag点映射到对应的OPC UA地址上，配置步骤如下： 
+**OPC UA对象属性映射** 
+
+将Tag点映射到OPC UA对象属性上，配置步骤如下： 
 
 1. 单击“添加”按钮； 
 2. 在弹出的选择点窗口中勾选需要映射的点； 
@@ -16,17 +18,27 @@
 
 <center>图5-3 OPC UA地址映射</center>
 
+![OPC UA示例图1](assets/OPC UA示例图1.png)
 
+数据采集中的建立的设备会映射成为OPC UA中DeviceFolder文件夹下的对象，设备中的Tag点会映射成为对象中的属性。
+
+描述：对象或属性的描述信息。
+
+数据类型：支持Boolean,UInt16,Int16,UInt32,Int32,Float六种。
+
+
+
+**示例**
 
 用UaExpert软件读取OPC UA服务示例，步骤如下：
 
-1. 此时已经在工程中进行了采集配置和OPC UA服务配置，也在服务中进行了地址映射，具体映射如下：
+1. 使能OPC UA服务，对象属性映射如下：
 
 ![OPC UA示例图1](assets/OPC UA示例图1.png)
 
-2. 将该工程通过工具栏中的“下载工程”按钮将工程下载到LMGateway当中，让网关自动运行当前工程。
+2. 将该工程通过工具栏中的“下载工程”按钮下载到LMGateway当中。
 
-3. 打开UaExpert软件，点击上方工具栏中蓝色“+”号按钮，在弹出框中双击,输入LMGateway的IP地址和上图中的端口号，点击“OK”。
+3. 打开UaExpert软件，点击上方工具栏中蓝色“+”号按钮，在标题为"Add Server"弹出框中双击“Double click to Add Server...”，输入LMGateway的IP地址和上图中的端口号，点击“OK”。
 
    ![OPC UA示例图2](assets/OPC UA示例图2.png)
 
@@ -34,7 +46,7 @@
 
    ![OPC UA示例图3](assets/OPC UA示例图3.png)
 
-   双击下图中的子节点
+   双击下图中的不加密的连接方式。
 
    ![OPC UA示例图4](assets/OPC UA示例图4.png)
 
@@ -43,6 +55,6 @@
    ![OPC UA示例图5](assets/OPC UA示例图5.png)
 
 
-5. 连接成功之后，就会在左侧显示所有的映射点，单击每个点就会在右侧显示该点的所有属性。
+5. 连接成功之后，会在左侧显示所有的映射点，单击每个点会在右侧显示该点的所有属性。
 
    ![OPC UA示例图6](assets/OPC UA示例图6.png)
