--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -1,14 +1,12 @@
 # 6.1 Mqtt Client
 
-可用于配置与Mqtt服务器的连接。用户可以在Mqtt Client页面配置设备，让设备将tag点信息上传到IoT中心，同时支持不同主题、不同频率的上传。 
-
-用户需要配置IoT中心连接属性、发布订阅的主题、需要上传的tag点等。 
+用于配置Mqtt连接属性、发布订阅的主题、需要上传的tag点等。  
 
 ## 6.1.1 基础连接属性
 
-- 启用云服务，启用后网关设备才会进行MQTT的连接； 
-- IP地址/域名、端口：网关设备需要连接的MQTT broker服务器的IP和端口号（默认1883）； 
-- ClientID：客户端唯一标识，同一时间内 Server 和同一个 ClientID 只能保持一个 TCP 连接，如果重复ClientID连接会踢掉前一个。 
+- 勾选“启用”框，网关开启MQTT客户端； 
+- IP地址/域名、端口：MQTT broker的IP/域名、端口号（默认1883）； 
+- ClientID：客户端唯一标识，不可重复。broker和Mqtt客户端通过 ClientID 保持唯一的 TCP 连接，如出现重复ClientID，则broker会踢掉前一个。 
 
 ![6-1 mqtt基础连接属性](assets/6-1 mqtt基础连接属性.png)
 
@@ -36,7 +34,7 @@
 
 2. 登录凭证（User Credentials）
 
-   用户名和密码：根据服务器的配置来确定在mqtt连接时是否需要经过用户名和密码的验证。
+   用户名、密码：根据broker的配置，确定mqtt连接时是否需要用户名、密码的验证。
 
    ![6-3 mqtt User Credentials](assets/6-3 mqtt User Credentials.png)
 
@@ -44,11 +42,11 @@
 
 3. 通信加密（SST/TLS）
 
-   默认为不启用SSL安全连接，用户需要启用SSL时可以选择两种方式： 
+   SSL有两种连接方式，默认不启用SSL安全连接： 
 
-   - 单向验证——需要上传CA文件到设备，当设备与云连接时，设备作为客户端提供证书供云服务商验证是否安全。CA文件由云服务商提供。 
+   - 单向验证——需要上传CA文件到网关，当网关与broker连接时，网关作为客户端提供证书供broker验证。CA文件由云服务商提供。 
 
-   - 双向验证——需要上传CA文件、Cert文件、KEY文件到设备，当设备与云连接时，客户端与云端 均向对方提供证书，相互验证。 
+   - 双向验证——需要上传CA文件、Cert文件、KEY文件到网关，当网关与broker连接时，网关与broker均向对方提供证书。CA文件、Cert文件、KEY文件均由云服务商提供。 
 
 ![6-4 mqtt SSLTLS](assets/6-4 mqtt SSLTLS.png)
 
@@ -56,9 +54,9 @@
 
 4. 遗嘱配置（Last Will and Testament）
 
-   默认不启用遗嘱，遗嘱是当网络连接关闭时，客户端必须发布这个遗嘱消息，所以被形象地称之为遗嘱， 
+   遗嘱是当网络连接断开时，客户端根据主题发布消息。启用遗嘱时需要设置遗嘱主题和遗嘱消息。
 
-   可用于通知异常断线。启用遗嘱时需要设置遗嘱主题和遗嘱内容。
+   默认不启用遗嘱。
 
    ![6-5 mqtt Last Will and Testament](assets/6-5 mqtt Last Will and Testament.png)
 
@@ -68,19 +66,43 @@
 
 ## 6.1.3 发布、订阅主题配置
 
-**实时数据发布主题：多主题、多频率、多格式上传** 
+**实时数据发布主题：多主题、多频率、不同格式上传** 
 
-可通过增删改按钮对实时数据的主题进行操作，每个主题可以使用不同的主题配置、不同的上传频率、不同的数据过滤方式、不同的上传数据的模板等。添加的主题就会显示到实时主题下拉列表框中，选择下拉列表中一个主题然后通过右侧的“添加”按钮添加需要通过该主题上传的数据。
+可通过增删改按钮对实时数据主题进行操作，每个主题可以使用不同的主题配置、不同的上传频率、不同的数据过滤方式、不同的数据格式模板等。
+
+添加的主题会显示到实时主题下拉列表中。选择下拉列表中一个主题，点击右侧“添加”按钮，选择该主题上传的Tag点。
 
 ![6-6 mqtt realtopic](assets/6-6 mqtt realtopic.png)
 
 <center>图6-6 mqtt实时数据发布主题 </center>
 
-如上图所示，每个实时数据主题都可以设置成不同的上传周期，不同的数据过滤方式，不同的上传数据的模板，如第一个实时数据主题可以为lm/gw/status/gw1,上传周期为10S，没有数据过滤，模板采用的是DCC；第二个实时数据主题可以为lm/gw/status/gw2,上传周期为5S，数据过滤选择“采集成功”，模板采用的是default。
+实时数据主题窗口包括以下配置项：
+
+- QoS：传输消息等级，默认为qos0 
+  - qos0：最多一次的传输。也就是发出去就删掉。（速度快） 
+  - qos1：至少一次的传输。发出去之后必须等待ack，没有ack，就要找时机重发  
+  - qos2： 只有一次的传输。消息id将拥有一个简单的生命周期。（可靠性高）
+
+- retained：默认为No
+  - Yes：表示发送的消息需要一直持久保存（不受服务器重启影响），不但要发送给当前的订阅者，并且以后新来的订阅了此Topic name的订阅者会马上得到推送。
+    备注：当订阅该Topic的客户端上线后，只会接收到最新的一条消息。
+  - No：仅仅为当前订阅者推送此消息。
+
+- 上传周期：mqtt发布消息的频率。
+- 数据过滤：以Tag点的值改变、是否采集成功（质量戳）和时间戳改变作为上传条件。
+- 模板：数据上传的格式，用户可以通过下拉框选择已有的模板。可根据用户需求定制模板。
+
+![添加上传点](assets/添加上传点.png)
+
+<center>添加上传点 </center>
 
 **拓展主题**
 
-- 离线数据发布的主题：网关在mqtt断线时，会根据上传的频率把数据存储在网关当中，在mqtt重连成功时会向离线数据的主题依次发送存储的数据。目前网关设备存储离线数据的容量为20M，当离线数据大于20M时，网关就会在存储新的离线数据时删除最早的离线数据。 查询数据的主题：在mqtt配置界面中“查询数据订阅的主题”一项输入需要订阅的主题，通过在mqtt服务器该主题上发布如下所示的格式的数据，即可实现查询数据的操作，网关会通过配置界面中“查询数据发布的主题”发布此次查询到的数据。 
+- 离线数据发布：网关在mqtt断线时，实时数据会根据上传周期将数据缓存在网关中。在mqtt恢复连接时，网关会在离线主题依次发布缓存数据。
+
+  - 网关设备缓存离线数据的容量为20M，当离线数据大于20M时，网关就会缓存新的一条离线数据时，删除最早的一条离线数据。 
+  
+- 查询数据主题：在配置界面中“查询数据订阅的主题”一项输入需要订阅的主题，当网关订阅到如下格式的数据，就进行数据查询的操作，网关会在“查询数据发布的主题”发布此次查询到的结果。
 
   
 
@@ -98,34 +120,29 @@
 
 
 
-- 推送事件的主题：如果在“报警与事件”(1.12章节)当中配置了报警事件，当报警事件触发或者解除时网关设 备会保存该事件并且会通过推送事件的主题将该事件发布到云服务器。 
+- 推送事件主题：如果在“报警与事件”(8.1章节)当中配置了报警事件，当报警事件触发或者解除时，网关通过推送事件的主题将该事件发布到Broker。 
 
-- 控制操作的主题：在mqtt配置界面中“写操作订阅的主题”一项输入需要订阅的主题，通过在mqtt服务器该主题上发布如下所示格式的数据，即可实现写入数据的操作。 
-
- 
+- 写操作主题：在配置界面中“写操作订阅的主题”一项输入需要订阅的主题，发布如下格式的数据，写入数据。  
 
 ```
  [
    {
-     "operate":"write","deviceCode":"Device_1",
-     "tagCode":"tag0001", "val":"10"
+     "operate":"write",//操作类型
+     "deviceCode":"Device_1",//采集协议页面中的设备名称
+     "tagCode":"tag0001",//数据点的名称
+     "val":"10"//需要写入的数值，字符串类型
    }
  ] 
 
 ```
 
 
-  deviceCode：采集协议页面中的设备名称, 
 
-  tagCode：数据点的名称； 
-
-  val：需要写入的数值，字符串类型。 
-
-- 重启网关的主题：在mqtt配置界面中“重启网关订阅的主题”一项输入需要订阅的主题，通过在mqtt服务器 该主题上发布如下所示的格式的数据，即可实现重启网关的操作。 
+- 重启网关主题：在配置界面中“重启网关订阅的主题”一项输入需要订阅的主题，订阅到如下所示的格式的数据，重启网关。 
 
 ​      ` {"operate":"reboot"}`
 
-- 配置网关的主题：通过云服务器将配置工具配置生成的数据库配置文件转换成二进制发布到配置网关的主题当中，实现远程配置网关。 
+- 配置网关主题：GC配置生成的数据库文件发布到配置网关的主题当中，远程配置网关。 
 
 ![6-7 mqtt 拓展主题](assets/6-7 mqtt 拓展主题.png)
 
@@ -133,9 +150,11 @@
 
 **高级参数** 
 
-如果需要在mqtt上传的JSON格式当中添加一些自定义的字段，可以通过“高级参数”的字段和修改模板的方式达到要求。 
+如果需要在mqtt上传的数据点添加额外的属性字段，可以添加“高级参数”（JSON对象格式）。
 
-在Mqtt Client页面点击“添加”按钮添加了需要上传的Tag点之后，可以双击需要添加自定义字段的Tag点，在“高 级参数”字段中添加所需要的json键值对，如{"unit":"摄氏度"}，然后通过联系配置工具制作商修改模板，就可以把“unit”当成此Tag点的属性生成json然后通 过实时数据的主题上传。 
+在Mqtt Client页面点击“添加”按钮，选择需要上传的Tag点，双击Tag点，在“高级参数”字段中添加所需要的json对象，如{"unit":"摄氏度"}。
+
+该操作需要配合模板使用。 
 
 ![6-8 mqtt 高级参数](assets/6-8 mqtt 高级参数.png)
 
