--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -106,7 +106,7 @@
 
   
 
-```
+```json
 {"operate":"read","devices":[
   {"deviceCode":"Device_1","tags":null}, 
   {"deviceCode":"Device_2",
@@ -124,7 +124,7 @@
 
 - 写操作主题：在配置界面中“写操作订阅的主题”一项输入需要订阅的主题，发布如下格式的数据，写入数据。  
 
-```
+```json
  [
    {
      "operate":"write",//操作类型
@@ -140,7 +140,11 @@
 
 - 重启网关主题：在配置界面中“重启网关订阅的主题”一项输入需要订阅的主题，订阅到如下所示的格式的数据，重启网关。 
 
-​      ` {"operate":"reboot"}`
+```json
+   {"operate":"reboot"}
+```
+
+
 
 - 配置网关主题：GC配置生成的数据库文件发布到配置网关的主题当中，远程配置网关。 
 
