--- a/ch9/ch9-3.md
+++ b/ch9/ch9-3.md
@@ -1,14 +1,53 @@
 # 9.3 使用示例
 
+**开机运行示例**
+
+```js
+while (true) { 
+    var status;
+    status = ReadStatus("system.TIME_SECOND");  //ReadStatus：读取数据点质量戳
+    console.log("system.TIME_SECOND status is ", status);
+	if(status){ // 如果该点存在并且质量戳为Good
+		var curVal;
+		curVal = ReadInt("system.TIME_SECOND"); //ReadInt：从指定数据点读取整数 
+		console.log("system.TIME_SECOND value is ", status);
+		WriteInt("user.test",curVal); //WriteInt：向指定数据点写入整数 
+	}
+    Sleep(1000); //休眠1秒钟
+}
+```
 
 
 
+**循环示例**
+
+```js
+var status;
+status = ReadStatus("system.TIME_SECOND"); //ReadStatus：读取数据点质量戳
+console.log("system.TIME_SECOND status is ", status);
+if(status){
+	var curVal;
+	curVal = ReadInt("system.TIME_SECOND"); //ReadInt：从指定数据点读取整数 
+	console.log("system.TIME_SECOND value is ", status);
+	WriteInt("user.test",curVal); //WriteInt：向指定数据点写入整数 
+}
+```
 
 
 
+**定时示例**
+
+```js
+var status;
+status = ReadStatus("system.TIME_SECOND"); //ReadStatus：读取数据点质量戳
+console.log("system.TIME_SECOND status is ", status);
+if(status){
+	var curVal;
+	curVal = ReadInt("system.TIME_SECOND"); //ReadInt：从指定数据点读取整数 
+	console.log("system.TIME_SECOND value is ", status);
+	WriteInt("user.test",curVal); //WriteInt：向指定数据点写入整数 
+}
+```
 
 
-
-
-<center>图8-1 JavaScript脚本编辑步骤</center>
 
