--- a/ch1/ch1-1.md
+++ b/ch1/ch1-1.md
@@ -1,12 +1,12 @@
 ## 1.1 新建工程
 
-在“工程管理”对话框中，单击“新建工程”；在弹出的“新建工程”对话框中，输入工程名称，单击“确定”，操作步骤如图 1-1 所示。 
+在“工程管理”对话框中，单击“新建工程”；在弹出的“新建工程”对话框中，输入工程名称，单击“确定”。 
 
 ![1-1 新建工程](assets/1-1 新建工程.png)
 
 <center>图1-1 新建工程</center>
 
-工程新建完成以后，会在左侧工程树中显示新建工程的名称作为根节点，之后的工程配置都在此处进行，如图1-2所示。
+工程新建完成以后，会在左侧工程树中显示新建工程的名称作为根节点，之后的工程配置都在此处进行。
 
 ![1-2 新建工程完成](assets/1-2 新建工程完成.png)
 
