--- a/ch5/ch5-1.md
+++ b/ch5/ch5-1.md
@@ -12,11 +12,11 @@ Modbus TCP和Modbus RTU通用参数如下：
 
   ​	使用默认值：相应的Modbus地址的点值置成表格中“默认值”列的值
 
-  ​	使用最后正常值：相应的Modbus地址的点值不发生改变
+  ​	使用最后正常值：相应的Modbus地址的点值最后一次采集正常的值
 
 **Modbus TCP配置** 
 
-使能Modbus TCP服务，允许上位机通过ModbusTCP协议经由网口连接访问设备。 
+使能Modbus TCP服务，允许上位机通过ModbusTCP协议经由网口连接访问网关。 
 
 端口号：设置Modbus TCP侦听端口号，默认值是502。 
 
@@ -24,7 +24,7 @@ Modbus TCP和Modbus RTU通用参数如下：
 
 **Modbus RTU配置** 
 
-使能Modbus RTU服务，点击“配置”按钮，在弹出对话框中添加指定串口，提供Modbus RTU服务。允许上位机通过Modbus RTU协议经由串口连接（RS-232/485)来访问设备。  
+使能Modbus RTU服务，点击“配置”按钮，在弹出对话框中添加指定串口，提供Modbus RTU服务。允许上位机通过Modbus RTU协议经由串口连接（RS-232/485)来访问网关。  
 
 ![RTU配置](assets/RTU配置.png)
 
