--- a/ch1/ch1-2.md
+++ b/ch1/ch1-2.md
@@ -6,9 +6,7 @@
 
 <center>图1-3 打开工程</center>
 
-
-
-在打开工程完成之后，会在左侧工程树中显示选中工程的配置(此处操作1.1章节中新建的“工程演示”工程)，如图1-4所示。 
+在打开工程完成之后，会在左侧工程树中显示选中工程的配置，如图1-4所示。 
 
 ![1-4 打开工程完成](assets/1-4 打开工程完成.png)
 
