--- a/ch2/ch2-2.md
+++ b/ch2/ch2-2.md
@@ -1,4 +1,4 @@
-# 2.3 实时数据、设置Tag点值
+# 2.2 实时数据、设置Tag点值
 
 **查看实时数据**
 
@@ -8,10 +8,10 @@ GC具有监控LMGateway数据的功能，单击网关IP，右侧显示通过 HTT
 
 <center>图2-6 实时数据</center>
 
-实时数据分为名称、value、quality、采集时间，分别如下：
+实时数据页面有以下字段：
 
 - 名称：Tag点在当前LMGateway中的唯一标识。
-- value：此时Tag点的实时值。
+- value：Tag点的实时值。
 - quality：Tag点的质量戳，Good表示采集成功，此时value显示采集到的值；Error为采集失败，此时value显示为空。
 
 
