--- a/ch2/ch2-4.md
+++ b/ch2/ch2-4.md
@@ -1,4 +1,4 @@
-# 2.5 调试模式
+# 2.4 调试模式
 
 用户通过点击工具栏中的“调试模式”按钮进入网关调试。 
 
@@ -6,7 +6,7 @@ GC的调试模式分为三部分：网关数据采集日志和报文输出、网
 
 
 
-## 2.5.1 网关数据采集日志和报文输出
+## 2.4.1 网关数据采集日志和报文输出
 
 用户可以查看网关运行日志及网关与设备交互的报文。
 
@@ -16,9 +16,9 @@ GC的调试模式分为三部分：网关数据采集日志和报文输出、网
 
 
 
-## 2.5.2 Ping测试
+## 2.4.2 Ping测试
 
-用户输入目标IP，点击“确定”按钮即可使网关对目标IP进行ping操作。(默认进行5次ping操作)。
+用户输入目标IP，点击“确定”按钮，网关对目标IP执行ping操作。(默认进行5次ping操作)。
 
 点击“调试”选项卡或者重启网关恢复正常采集、服务。
 
@@ -28,7 +28,7 @@ GC的调试模式分为三部分：网关数据采集日志和报文输出、网
 
 
 
-## 2.5.3 串口测试
+## 2.4.3 串口测试
 
 用户可以通过串口测试，设置网关串口，发送下方文本框中编辑的16进制报文，验证串口参数设置，查看报文收发。
 
