--- a/ch3/ch3-4.md
+++ b/ch3/ch3-4.md
@@ -1,10 +1,10 @@
 # 3.4 计算点
 
-用户点属于只读的内部点，它的值是某个表达式的计算结果。
+计算点属于只读的内部点，它的值是某个表达式的计算结果。
 
 该表达式的参数可以是Tag点或常数，在表达式中可以使用一些常用的计算方法，包括四则运算，逻辑运算，三角函数等。 
 
-通过使用计算点，可以做一些相对复杂的计算，例如将采集到的传感器数值通过换算得到实际的物理量，这样可以减少上位机的运算量，也使得设备更加智能化。 
+通过使用计算点，可以做一些相对复杂的计算，例如将采集到的传感器数值通过换算得到实际的物理量，这样可以减少上位机的运算量，使得设备更加智能化。 
 
 每个计算点对应一个表达式，表达式可以有最多4个Tag点作为输入变量，为了方便起见，4个Tag点在表达式中分别使用A，B，C，D来表示。操作步骤如下： 
 
