--- a/ch5/ch5-3.md
+++ b/ch5/ch5-3.md
@@ -20,7 +20,7 @@ OPC UA服务器实现了Tag点到对象属性的映射，允许上位机通过 O
 
 ![OPC UA示例图1](assets/OPC UA示例图1.png)
 
-数据采集中的建立的设备会映射成为OPC UA中DeviceFolder文件夹下的对象，设备中的Tag点会映射成为对象中的属性。
+将工程文件中的I/O、用户、计算、系统映射成为OPC UA中DeviceFolder文件夹下的对象，网关中的Tag点会映射成为对象中的属性。
 
 描述：对象或属性的描述信息。
 
