--- a/ch6/ch6-2.md
+++ b/ch6/ch6-2.md
@@ -1,6 +1,6 @@
 # 6.2 IoTDDC
 
-应用于本公司的能耗测控系统当中。 
+应用于快速连接罗米测控IoT数据中心。 
 
 1. 通过填写分配的IP、ClientID，自定义上传周期，点击“保存”按钮即可完成IoTDCC的连接配置； 
 2. 点击“添加”按钮，完成需要上传的数据点的添加； 
