--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -121,7 +121,7 @@
 
 - 推送事件主题：如果在“报警与事件”(8.1章节)当中配置了报警事件，当报警事件触发或者解除时，网关通过推送事件的主题将该事件发布到Broker。 
 
-- 写操作主题：在配置界面中“写操作订阅的主题”一项输入需要订阅的主题，当选中default.js时，发布如下格式的数据，写入数据。  
+- 写操作主题：在配置界面中“写操作订阅的主题”一项输入需要订阅的主题，当选中default.js时，发布如下格式的数据，网关进行相应的写操作。  
 
 ```json
  [
