--- a/ch6/ch6-4.md
+++ b/ch6/ch6-4.md
@@ -26,23 +26,21 @@
 
 
 
-3.在每个传感器的读写标识中填入在GC“数据采集”节点下数据点的唯一标识，如下图所示唯一标识为Device1.tag0001。
-
-![标识符](assets/标识符.png)
-
-
-
 在Tlink物联网平台中进行了上述步骤之后，在GC中进行Tlink页面的配置，具体步骤如下：
 
-1.勾选“启用”按钮，填写Tlink物联网平台设备信息中的序列号，上传周期自定义。点击“保存”按钮即可完成Tlink的连接配置；
-
-2.点击“添加”按钮，完成需要上传的数据点的添加。 
+1.勾选“启用”按钮，填写Tlink物联网平台设备信息中的IP和序列号，上传周期自定义。点击“保存”按钮即可完成Tlink的连接配置；
 
 ![6-15 Alink连接配置](assets/6-15%20Alink%E8%BF%9E%E6%8E%A5%E9%85%8D%E7%BD%AE.png)
 
 <center>图6-18 Tlink连接配置</center>
 
+2.点击“添加”按钮，完成需要上传的数据点的添加。 
 
+3.将Tlink页面中生成的传感器ID填写到对应的数据点表格当中。
+
+![6-19 上传点的配置](assets/6-19 上传点的配置.png)
+
+<center>图6-19 上传点配置</center>
 
  
 
