修改Tlink中错误图片

--- a/ch6/ch6-4.md
+++ b/ch6/ch6-4.md
@@ -30,7 +30,7 @@
 
 1.勾选“启用”按钮，填写Tlink物联网平台设备信息中的IP和序列号，上传周期自定义。点击“保存”按钮即可完成Tlink的连接配置；
 
-![6-15 Alink连接配置](assets/6-15%20Alink%E8%BF%9E%E6%8E%A5%E9%85%8D%E7%BD%AE.png)
+![6-18 Tlink连接配置](assets/6-18 Tlink连接配置.png)
 
 <center>图6-18 Tlink连接配置</center>
 
