历史数据接口描述出错

--- a/ch2/ch2-5.md
+++ b/ch2/ch2-5.md
@@ -14,7 +14,7 @@
 
 ##### URL（获取实时数据地址）：
 
-> http://192.168.1.233/API/V2/real(192.168.1.233为需要查询的网关的ip地址)
+> http://192.168.1.233/API/V2/real (192.168.1.233为需要查询的网关的ip地址)
 
 ##### HTTP请求方式：
 
@@ -89,7 +89,7 @@
 
 ##### URL（获取实时数据地址）：
 
-> http://192.168.1.233/API/V2/real?deviceCode=Device1(192.168.1.233为需要查询的网关的ip地址，Device1为需要获取数据的设备名称)
+> http://192.168.1.233/API/V2/real?deviceCode=Device1 (192.168.1.233为需要查询的网关的ip地址，Device1为需要获取数据的设备名称)
 
 ##### HTTP请求方式：
 
@@ -158,7 +158,7 @@
 
 ##### URL（进行写操作地址）：
 
-> http://192.168.1.233/ctrlRequest(192.168.1.233为需要进行写操作的网关的ip地址)
+> http://192.168.1.233/ctrlRequest (192.168.1.233为需要进行写操作的网关的ip地址)
 
 ##### HTTP请求方式：
 
@@ -199,9 +199,9 @@ HTTP通讯成功返回结果都为true，指明网关接收到发送的写操作
 
 > 获取指定日期、指定Tag点的历史数据
 
-##### URL（进行写操作地址）：
+##### URL（获取历史数据地址）：
 
-> http://192.168.1.233/API/V1/history?startTime=2019-07-09&tagID=Device1.tag0001(192.168.1.233为需要进行写操作的网关的ip地址，startTime为需要获取历史数据的指定日期，tagID为需要获取历史数据的指定Tag点)
+> http://192.168.1.233/API/V1/history?startTime=2019-07-09&tagID=Device1.tag0001 (192.168.1.233为需要获取历史数据的网关的ip地址，startTime为需要获取历史数据的指定日期，tagID为需要获取历史数据的指定Tag点)
 
 ##### HTTP请求方式：
 
