mqtt远程配置；附录

--- a/ch2/ch2-3.md
+++ b/ch2/ch2-3.md
@@ -12,11 +12,21 @@
 
 点击“设置IP”按钮，弹出"IP地址配置"窗口。
 
+**设置有线IP：**
+
 ![2-8 设置IP](assets/2-8 设置IP.png)
 
 <center>图2-8 设置IP</center>
 
 点击“应用到网关”按钮，网关立即生效。（网口支持DHCP）
+
+
+
+**设置WIFI：**
+
+![设置WIFI](assets/设置WIFI.png)
+
+将SSID、密码、IP信息正确填写完成后，点击“保存”，将 usb 无线网卡插入到网关的 usb 端口，重新启动网关即可使用 usb 无线网卡。
 
 
 
