根据GC的更改和新增，修改文档

--- a/ch2/ch2-1.md
+++ b/ch2/ch2-1.md
@@ -14,7 +14,11 @@
 
 将网络中的LMGateway全部搜索并列到在线网关列表中。
 
-在1.1章节“新建工程”-“添加网关”时填写了备注，“搜索网关”时会将备注显示在IP之前。
+在“系统设置”的“网关备注”窗口中填写了备注，“搜索网关”时会将备注显示在IP之前。
+
+![设置备注](assets/设置备注.png)
+
+<center>图2-4 设置网关备注</center>
 
 ![2-4 搜索网关](assets/2-4 搜索网关.png)
 
@@ -24,7 +28,7 @@
 
 **查看网关信息** 
 
-双击网关IP，弹出窗口中包含网关的硬件版本、软件版本、支持点数和SN号，其中支持点数是指网关中的数据点低于支持点数时可以保证网关的运行效率。
+双击网关IP，弹出窗口中包含网关类型、软件版本、支持点数、网关备注、网关ID和SN号，其中支持点数是指网关中的数据点低于支持点数时可以保证网关的运行效率。
 
 ![2-5 网关信息](assets/2-5 网关信息.png)
 
