--- a/ch5/ch5-1.md
+++ b/ch5/ch5-1.md
@@ -13,6 +13,8 @@ Modbus TCP和Modbus RTU通用参数如下：
   ​	使用默认值：相应的Modbus地址的点值置成表格中“默认值”列的值
 
   ​	使用最后正常值：相应的Modbus地址的点值最后一次采集正常的值
+  
+- 服务延迟启动时间：Modbus服务延时多少秒启动。
 
 **Modbus TCP配置** 
 
@@ -36,7 +38,7 @@ Modbus TCP和Modbus RTU通用参数如下：
 
 报文格式：指定以modbus TCP或modbus RTU格式的报文进行交互。
 
-心跳包格式：HBT + 心跳包ID。
+心跳包格式：序列号文本框中填写的文本。
 
 心跳周期：勾选则网关周期上传心跳包，不勾选则网关仅在上电时发送一次心跳包。
 
