--- a/ch5/ch5-3.md
+++ b/ch5/ch5-3.md
@@ -2,7 +2,22 @@
 
 OPC UA服务器实现了Tag点到对象属性的映射，允许上位机通过 OPC UA协议读写Tag点。 
 
+![OPC UA配置](assets/OPC UA配置.png)
+
 端口号：设置OPC UA侦听端口号，默认值是4840。 
+
+Anonymous：选中之后，启用匿名的方式连接 OPCUAServer。 
+
+Username、Password：选中之后，在“Username”填入 用户名，“Password”填入密码。启用户名密码的 
+
+方式连接 OPCUAServer。 
+
+Certificate：选中之后，点击“Load”，导入证书的路径。启用交换证书的方式连接OPCUAServer。 
+
+安全策略：None，Basic256，Basic128Rsa15，Basic256Sha256
+
+1. 当 选中为 None时，，OPCClient 和OPCServer 之间的通信将不会有加密和签名；
+2. 当 “安全策略”选中为 Basic256，Basic128Rsa15，Basic256Sha256中的任意一个时，OPCClient和OPCServer 之间的通信将会有签名或者签名和加密，提高客户端和服务器的通信安全。 
 
 **OPC UA对象属性映射** 
 
