--- a/ch2/ch2-4.md
+++ b/ch2/ch2-4.md
@@ -20,7 +20,7 @@ GC的调试模式分为三部分：网关数据采集日志和报文输出、网
 
 用户输入目标IP，点击“确定”按钮，网关对目标IP执行ping操作。(默认进行5次ping操作)。
 
-点击“调试”选项卡或者重启网关恢复正常采集、服务。
+点击“实时数据”选项卡、“运行日志”选项卡或者重启网关恢复正常采集、服务。
 
 ![2-15 ping测试](assets/2-15 ping测试.png)
 
@@ -31,6 +31,8 @@ GC的调试模式分为三部分：网关数据采集日志和报文输出、网
 ## 2.4.3 串口测试
 
 用户可以通过串口测试，设置网关串口，发送下方文本框中编辑的16进制报文，验证串口参数设置，查看报文收发。
+
+点击“实时数据”选项卡、“运行日志”选项卡或者重启网关恢复正常采集、服务。
 
 ![2-16 串口测试](assets/2-16 串口测试.png)
 
