--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -98,10 +98,13 @@
 
 **拓展主题**
 
+- 连接主题：mqtt连接成功时，将填写的字符串发布到相应的主题。
+
+  ![连接主题](assets/连接主题.png)
+
 - 离线数据发布：网关在mqtt断线时，实时数据会根据上传周期将数据缓存在网关中。在mqtt恢复连接时，网关会在离线主题依次发布缓存数据。
 
   - 网关设备缓存离线数据的容量为20M，当离线数据大于20M时，网关就会缓存新的一条离线数据时，删除最早的一条离线数据。 
-  
 - 查询数据主题：在配置界面中“查询数据订阅的主题”一项输入需要订阅的主题，当选中default.js时，网关订阅到如下格式的数据，就进行数据查询的操作，网关会在“查询数据发布的主题”发布此次查询到的结果。
 
 
@@ -120,7 +123,7 @@
 
 
 - 推送事件主题：如果在“报警与事件”(8.1章节)当中配置了报警事件，当报警事件触发或者解除时，网关通过推送事件的主题将该事件发布到Broker。 
-
+- 子设备状态推送主题：子设备为网关通讯的设备，在子设备上线和下线时会将状态推送到配置主题。
 - 写操作主题：在配置界面中“写操作订阅的主题”一项输入需要订阅的主题，当选中default.js时，发布如下格式的数据，网关进行相应的写操作。  
 
 ```json
