--- a/ch6/ch6-2.md
+++ b/ch6/ch6-2.md
@@ -2,19 +2,16 @@
 
 应用于快速连接罗米测控IoT数据中心。 
 
-1. 在浏览器中输入www.iotddc.com，注册或登录云平台，在“网关管理”中“添加”网关；
+1. 在GC中注册或登录云平台；
 
-   ![iotddc](assets/iotddc.jpg)
+![注册或登录](assets/注册或登录.png)
 
-   <center> IoTDDC增加网关</center>
+2. 新增或者选择已有的网关唯一标识；
 
-2. 复制新建的网关ClientID，勾选“启用”，通过填写IP、ClientID，自定义上传周期，点击“保存”按钮即可完成IoTDCC的连接配置； 
+   ![网关唯一标识](assets/网关唯一标识.png)
 
-3. 点击“添加”按钮，完成需要上传的数据点的添加； 
-
-4. 点击“上传云端”按钮，将当前的工程上传到云服务器当中。 
+3. 点击“添加”按钮，完成需要上传的数据点的添加；
 
 ![6-9 IoTDCC](assets/6-9 IoTDCC.png)
 
-<center>图6-9 IoTDDC</center>
-
+4. 点击“保存并上传平台”按钮，将改页面保存，并将整体工程上传到云端平台，进行下一步数据点含义
