远程配置说明

--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -160,7 +160,7 @@
 
 
 
-- 配置网关主题：GC配置生成的数据库文件发布到配置网关的主题当中，远程配置网关。 
+- 配置网关主题：将GC配置生成的数据库文件读取成二进制字符串并转化成字节发布到配置网关的主题当中，实现远程配置网关（数据库文件的路径为：[GC安装目录]/Project/[工程名]/Gateway.db）。
 
 ![6-7 mqtt 拓展主题](assets/6-7 mqtt 拓展主题.png)
 
