--- a/ch1/ch1-4.md
+++ b/ch1/ch1-4.md
@@ -2,7 +2,7 @@
 
 在“网关管理”对话框中，选中需要上传工程的网关IP，单击“系统设置”，在弹出的系统提示框中单击“登录”（默认密码为空），单击“上传工程”。操作步骤如图 1-7 所示。 
 
-![](E:\githubbook\documents\ch1\assets\1-7 上传工程.png)
+![1-7 上传工程](assets\1-7 上传工程.png)
 
 <center>图1-7 上传工程</center>
 
