--- a/ch9/ch9-2.md
+++ b/ch9/ch9-2.md
@@ -6,7 +6,7 @@ JS 脚本编辑器内置的函数说明如下：
 
 1. ReadBit从指定Tag点读取Boolean，输入参数为Tag点名称的字符串，如果该点不存在或者质量戳不为Good，返回undefined。
 
-   语法：
+   示例：
 
    ```js
    var tagValueBit = ReadBit('Device1.tag0001');
@@ -16,7 +16,7 @@ JS 脚本编辑器内置的函数说明如下：
 
 2. ReadStatus从指定Tag点读取状态,，输入参数为Tag点名称的字符串，返回为Boolean，True为采集成功，False为采集失败，如果该点不存在或者质量戳不为Good，返回undefined。
 
-   语法：
+   示例：
 
    ```js
    var tagStatus = ReadStatus('Device1.tag0001');
@@ -26,7 +26,7 @@ JS 脚本编辑器内置的函数说明如下：
 
 3. ReadInt从指定Tag点读取整数，输入参数为Tag点名称的字符串，如果该点不存在或者质量戳不为Good，返回undefined。
 
-   语法：
+   示例：
 
    ```js
    var tagValueInt = ReadInt('Device1.tag0001');
@@ -36,7 +36,7 @@ JS 脚本编辑器内置的函数说明如下：
 
 4. ReadFloat从指定Tag点读取浮点数，如果该点不存在或者质量戳不为Good，返回undefined。
 
-   语法：
+   示例：
 
    ```js
    var tagValueFloat = ReadFloat('Device1.tag0001');
@@ -44,9 +44,9 @@ JS 脚本编辑器内置的函数说明如下：
 
    
 
-5. WriteBit向指定Tag点写入整型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值JS的Boolean类型，无返回值。
+5. WriteBit向指定Tag点写入布尔型，参数依次为：Tag点名称（类型为字符串），需要写入Tag点的值（类型为布尔型），无返回值。
 
-   语法：
+   示例：
 
    ```js
    var value = true;
@@ -56,9 +56,9 @@ JS 脚本编辑器内置的函数说明如下：
 
    
 
-6. WriteInt向指定Tag点写入整型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值的JS的Number类型，无返回值。
+6. WriteInt向指定Tag点写入整型，参数依次为：Tag点名称（类型为字符串），需要写入Tag点的值（类型为整型），无返回值。
 
-   语法：
+   示例：
 
    ```js
    var value = 10;
@@ -68,9 +68,9 @@ JS 脚本编辑器内置的函数说明如下：
 
    
 
-7. WriteFloat向指定Tag点写入浮点型，输入参数为Tag点名称的字符串，和需要设置该Tag点的值的JS的Number，无返回值。
+7. WriteFloat向指定Tag点写入浮点型，参数依次为：Tag点名称（类型为字符串），需要写入Tag点的值（类型为浮点型），无返回值。
 
-   语法：
+   示例：
 
    ```js
 var value = 1.23;
@@ -79,6 +79,62 @@ var value = 1.23;
    ```
    
    
+   
+8. WriteString向指定Tag点写入字符串，参数依次为：Tag点名称（类型为字符串），需要写入Tag点的值（类型为字符串），无返回值。
+
+   示例：
+
+   ```js
+   var value = "String";
+   
+   WriteString('Device1.tag0001'， value);
+   ```
+
+   
+
+## 通讯函数
+
+1. SendMsgToPort向指定串口发送报文，并返回接收到的报文，参数依次为：串口号，波特率，数据位，停止位，奇偶校验（ 0:N，1:O，2:E），超时时间（单位毫秒：1000毫秒=1秒），发送的报文，等待接收的字节数。返回值为字符串型。
+
+   示例：
+
+   ```js
+   while(true){                                                   //1个不会结束的循环
+       var A = [0x17, 0x03, 0x00, 0x00, 0x00, 0x04, 0x46, 0xff];  //报文内容
+       var rs = SendMsgToPort('com1',9600,8,1,0,2000,A,0);        //向串口发送报文
+       //console.log(rs);                                         //打印出返回值
+       if(rs){                                                    //判断返回值是否为空
+           var str=rs.slice(7,8);                                 //按报文说明截取数据
+           //console.log(str);                                    //打印出str的内容
+           reint = parseInt(str,16);                              //把字符串转成int16
+           WriteFloat('user.tag0001',reint);                      //把值写入指定的用户点
+       }
+       Sleep(1000);                                               //等待1秒后再次执行循环体
+   }
+   ```
+
+   
+
+2. SendMsgToTCP向指定网口发送指定报文，并返回接收到的报文。参数依次为：IP地址，端口，超时时间（单位毫秒：1000毫秒=1秒），发送的报文。返回值为字符串型。
+
+   示例：
+
+   ```js
+   while(true){                                                   //1个不会结束的循环
+       var A = [0x17, 0x03, 0x00, 0x00, 0x00, 0x04, 0x46, 0xff];  //报文内容
+       var rs = SendMsgToTCP('192.168.1.88',81,2000,A);           //向网口发送报文
+       //console.log(rs);                                         //打印出返回值
+       if(rs){                                                    //判断返回值是否为空
+           var str = rs.slice(7,8);                               //按报文说明截取数据
+           //console.log(str);                                    //打印出str的内容
+           reint = parseInt(str,16);                              //把字符串转成int16
+           WriteFloat('user.tag0001',reint);                      //把值写入指定的用户点
+       }
+       Sleep(1000);                                               //等待1秒后再次执行循环体
+   }
+   ```
+
+
 
 ## 系统函数
 
