--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -96,6 +96,12 @@
 
 <center>添加上传点 </center>
 
+**控制主题**
+
+可通过控制订况的主题和控制向应发布的主题对设备进行写操作，每个主题可以使用不同的主题配置、不同的数据格式模板等。
+
+![控制主题](assets\控制主题.png)
+
 **拓展主题**
 
 - 连接主题：mqtt连接成功时，将填写的字符串发布到相应的主题。
@@ -158,13 +164,11 @@
    {"operate":"reboot"}
 ```
 
-
-
-- 配置网关主题：将GC配置生成的数据库文件读取成二进制字符串并转化成字节发布到配置网关的主题当中，实现远程配置网关（数据库文件的路径为：[GC安装目录]/Project/[工程名]/Gateway.db）。  
-
-![6-7 mqtt 拓展主题](assets/6-7 mqtt 拓展主题.png)
+![6-7 mqtt 拓展主题](E:/githubbook/documents/ch6/assets/6-7%20mqtt%20%E6%8B%93%E5%B1%95%E4%B8%BB%E9%A2%98.png)
 
 <center>图6-7 mqtt拓展主题 </center>
+
+- 配置网关主题：将GC配置生成的数据库文件读取成二进制字符串并转化成字节发布到配置网关的主题当中，实现远程配置网关（数据库文件的路径为：[GC安装目录]/Project/[工程名]/Gateway.db）。  
 
 **高级参数** 
 
