更新图片及一些新功能

--- a/ch2/ch2-1.md
+++ b/ch2/ch2-1.md
@@ -1,4 +1,4 @@
-# 2.1 添加、搜索、查看网关
+# 2.1 添加、搜索、查看、备注网关
 
 **添加网关** 
 
@@ -14,23 +14,21 @@
 
 将网络中的LMGateway全部搜索并列到在线网关列表中。
 
-在“系统设置”的“网关备注”窗口中填写了备注，“搜索网关”时会将备注显示在IP之前。
+双击网关IP，弹出“网关信息”窗口中包含网关类型、软件版本、支持点数、网关备注、SN号，其中支持点数是指网关中的数据点低于支持点数时可以保证网关的运行效率。
+
+可以修改网关的备注，完成后需要重启关网生效。“搜索网关”时会将备注内容显示在IP之前。
 
 ![设置备注](assets/设置备注.png)
 
 <center>图2-4 设置网关备注</center>
 
+重启网关操作：单击搜索到的网关IP，然后点“系统设置”，在系统设置框内点登录（默认密码为空），再点“重启网关”即可。
+
+![重启网关](assets/重启网关.png)
+
+<center>重启网关</center>
+
 ![2-4 搜索网关](assets/2-4 搜索网关.png)
 
 <center>图2-4 搜索网关</center>
-
-
-
-**查看网关信息** 
-
-双击网关IP，弹出窗口中包含网关类型、软件版本、支持点数、网关备注、网关ID和SN号，其中支持点数是指网关中的数据点低于支持点数时可以保证网关的运行效率。
-
-![2-5 网关信息](assets/2-5 网关信息.png)
-
-<center>图2-5 查看网关信息</center>
 
