--- a/ch1/ch1-2.md
+++ b/ch1/ch1-2.md
@@ -8,7 +8,7 @@
 
 在打开工程完成之后，会在左侧工程树中显示选中工程的配置，如图1-4所示。 
 
-![1-4 打开工程完成](assets/1-4 打开工程完成.png)
+![1-4 打开工程完成](assets/1-2 新建工程完成.png)
 
 <center>图1-4 打开工程完成</center>
 
