--- a/ch2/ch2-3.md
+++ b/ch2/ch2-3.md
@@ -2,81 +2,55 @@
 
 点击“系统设置”按钮，在弹出的“系统设置”框中输入登录密码后点击“登录”按钮(出厂默认无密码，可直接点击“登录”按钮)。
 
-![系统设置](assets/系统设置.jpg)
+![系统设置](assets/系统设置.png)
 
 
 
-## 2.3.1 设置IP
+## 2.3.1 网络设置
 
 用户可以通过GC修改在线LMGateway网口的网络参数。 
 
-点击“设置IP”按钮，弹出"IP地址配置"窗口。
+点击“网络设置”按钮，出现三个选项卡：IP设置、网关管理平台、防火墙。
 
-**设置有线IP：**
+**IP设置：可以切换联网方式：有线、WIFI、4G，选择有线或WIFI时可以配置相关的网络参数。
 
-![2-8 设置IP](assets/2-8 设置IP.png)
+![2-8 网络设置](assets/2-8 网络设置.png)
 
 <center>图2-8 设置IP</center>
 
 点击“应用到网关”按钮，网关立即生效。（网口支持DHCP）
 
-
-
-**设置WIFI：**
-
-![设置WIFI](assets/设置WIFI.png)
-
-将SSID、密码、IP信息正确填写完成后，点击“保存”，将 usb 无线网卡插入到网关的 usb 端口，重新启动网关即可使用 usb 无线网卡。
+WIFI配置：将SSID、密码、IP信息正确填写完成后，点击“保存”，将 usb 无线网卡插入到网关的 usb 端口，重新启动网关即可使用 usb 无线网卡。
 
 
 
-## 2.3.2 网关备注
+**网关管理平台设置：**
 
-GC可以给LMGateway设置备注，在搜索网关时显示该备注，便于客户管理。
+网关管理平台是一个可以通过GC远程管理网关的一个平台，平台的网址为：http://hub.iotddc.com,可以在登陆界面中注册一个帐号，然后登陆进管理平台。
 
-点击"系统设置"框中“网关备注”按钮进行备注设置。
+![网关管理平台](assets/网关管理平台.png)
 
-![设置备注](assets/设置备注.png)
-
-<center>网关备注</center>
+网关管理平台操作请观看操作视频：http://www.iotddc.com/download/filemanage/admin/2.3config.mp4
 
 
 
-## 2.3.3 设置远程配置
+## 2.3.2 远程管理网关
 
-GC可以通过远程部署系统，将工程远程下载到网关当中。
+网关管理平台注册、配置完成后，GC启动时动弹出登录窗口，正常登陆后，GC可以将工程远程下载到网关当中。
 
-1. 通过浏览器登录www.iotddc.com:8081，登录注册一个用户，之后添加网关，“复制网关标识”
+![远程管理网关登录](assets/远程管理网关登录.png)
 
-![远程部署1](assets/远程部署1.png)
+![远程下载工程](assets/远程下载工程.png)
 
-![远程部署2](assets/远程部署2.png)
+查看远程网关：
 
-“网关标识”为远程部署系统中网关的唯一标识，每个网关的标识不能重复。
+![查看远程网关](assets/查看远程网关.png)
 
-2. 点击GC的"系统设置"框中“设置远程配置”按钮，分别填写
+## 2.3.3 远程网关透传
 
-​    网关管理平台：[www.iotddc.com](http://www.iotddc.com)
+远程网关透传，主要用于PLC透传，即使用PLC编程软件进行程序的在线监控、上传和下载等。
 
-​    端口：1885
-
-​    网关ID：复制的网关标识
-
-![远程部署3](assets/远程部署3.png)
-
-3. 重启网关，网络正常时平台页面会显示“在线”
-
-   ![远程部署4](assets/远程部署4.png)
-
-用户也可通过此页面管理所有LMGateway，查看最后上线时间、进行网关重启。
-
-4. 显示在线时，说明网关与部署系统连接正常，此时可通过配置工具进行远程配置
-
-   ![远程部署5](assets/远程部署5.png)
-
-   输入用户名和密码，点击“登录”按钮，在网关ID的下拉框中会显示该用户下所有的网关标识，选择需要将该工程下载到的网关标识，点击“远程下载”。
-   
-   
+![远程管理网关登录](assets/远程网关透传.png)
 
 
 ## 2.3.4 上传工程
@@ -85,7 +59,7 @@ GC可以将当前网关的配置文件上传到本地。
 
 点击"系统设置"框中“上传工程”按钮，工程文件会上传至GC安装目录的Project文件夹下。
 
-![2-9 上载工程](assets/2-9 上载工程.png)
+![2-9 上传工程](assets/2-9 上传工程.png)
 
 <center>图2-9 上传工程</center>
 
