--- a/ch3/ch3-2.md
+++ b/ch3/ch3-2.md
@@ -19,6 +19,8 @@
 
 同一个通道下的设备具有相同的协议属性，可以选中已编辑好的设备，右键“批量复制新增”，在弹出框中点击“+”按钮，编辑新设备的设备名称，设备地址。这个操作可以快速编辑完成一个通道下的若干设备。如图3-4所示。
 
+当设备特别多时，批量增加也比较费力，这时可以使用”导出“按钮，获得一个EXCEL文件，在EXCEL内进行批量操作后，再用”导入“按钮把内容导入进来即可。
+
 ![3-4 批量复制新增](assets/3-4 批量复制新增.png)
 
 <center>图3-4 批量复制新增</center>
