--- a/ch3/ch3-5.md
+++ b/ch3/ch3-5.md
@@ -8,6 +8,10 @@
 
 **默认拥有的系统点：**
 
+START_TIME：程序启动的时间
+
+TIME：网关系统时间
+
 TIME_SECOND：系统时间中的秒值，在工程中该点的标识为system.TIME_SECOND
 
 TIME_MINUTE：系统时间中的分值，在工程中该点的标识为system.TIME_MINUTE
@@ -21,6 +25,42 @@ TIME_MONTH：系统时间中几月，在工程中该点的标识为system.TIME_M
 TIME_YEAR：系统时间中的年，在工程中该点的标识为system.TIME_YEAR
 
 TIME_WDAY：系统时间中星期几，在工程中该点的标识为system.TIME_WDAY
+
+LONGITUDE：4G网络获取到的经度
+
+LATITUDE：4G网络获取到的纬度
+
+IMEI：4G网络GSM 模块的 IMEI (国际移动设备标识)
+
+IMSI：4G网络SIM 卡的IMSI (国际移动签署者标识)
+
+Cops：4G网络服务商
+
+Lac_ci：4G网络位置区编号_小区ID
+
+CSQ：4G网络信号质量
+
+STORAGE_SIZE：存储空间大小(单位:M)
+
+STORAGE_FREE_SIZE：空闲存储空间大小(单位:M)
+
+STORAGE_USAGE：存储空间使用率(%)
+
+MEMORY_SIZE：内存大小(单位:M)
+
+MEMORY_FREE_SIZE：空闲内存大小(单位:M)
+
+MEMORY_CACHED：已用缓存大小(单位:M)
+
+MEMORY_USAGE：内存使用率(%)
+
+CPU_USAGE：CPU使用率(%)
+
+ALL_NET：网口列表
+
+MQTT1(MQTT)：Mqtt 客户端状态
+
+
 
 **设备状态点**：
 
