--- a/ch4/ch4-1.md
+++ b/ch4/ch4-1.md
@@ -1,19 +1,60 @@
-# 4.1 数据存储配置
+# 4.1 罗米物联网平台配置
 
-开启数据存储功能，需要在数据存储页面进行相关的配置，操作步骤如下：
-
-1. 单击“数据存储”节点，打开数据存储的配置页面； 
-2. 勾选“启用”复选框； 
-3. 选择存储模式：周期存储（需要设置存储周期）和准点存储（需要添加每天存储的整点时间）； 
-4. 点击“保存”完成配置。 
+单击”罗米物联网平台 “，填写相关参数，在右边的列中点”添加”，选择需要上传到平台的采集点。
 
 如图4-1所示。
 
-![4-1 数据存储配置](assets/4-1 数据存储配置.png)
+![4-1 罗米物联平台参数配置](assets/4-1 罗米物联平台参数配置.png)
 
-<center>图4-1 数据存储配置</center>
+<center>图4-1 罗米物联平台参数配置</center>
 
-LMGateway网关的数据存储只能存储到TF卡当中。
 
-GC运行工程时数据库文件存储在安装目录的history文件夹。
+
+**罗米物联网平台功能简介：**
+
+　　**数据与监控：**同时支持PC端（网址：http://cloud.iotddc.com）和手机端（公众号：罗米测控）操作，可实时监控网关、设备、采集点的状态，查看实时和历史数据及生成图表。
+
+　　**告警及通知：**可设置告警条件，生成**告警通知**并推送到**微信**或**邮箱**，及时掌握设备状运行状态。
+
+　　**数据转发：**支持数据库转发、 webService转发、TCP转发等。
+
+　　**高级功能：**能耗管理模块，功能有报表、图表、位置分组、倍率、公式计算、自定义报表等。
+
+　　**详情请进：**http://cloud.iotddc.com
+
+![网关监控](assets/网关监控.png)
+
+<center>网关监控</center>
+
+
+
+![网关监控](assets/设备监控.png)
+
+<center>实时数据</center>
+
+
+
+![折线图](assets/折线图.png)
+
+<center>图表</center>
+
+
+
+　<div align="center">
+     <img src="assets/手机端.jpg" height="600" width="280" alt="罗米物联平台手机端" />
+     <span>　　　<span>
+     <img src="assets/罗米物联首页.jpg" height="600" width="280" alt="罗米物联首页" />  </div>
+
+<center>手机端登录和首页</center>
+
+
+
+<div align="center">
+     <img src="assets/罗米物联设备.jpg" height="600" width="280" alt="罗米物联设备" />
+    <span>　　　<span>
+        <img src="assets/微信告警通知.jpg" height="600" width="280" alt="告警通知到微信" />    </div>
+
+<center>手机端实时数据和告警通知</center>
+
+
 
