1、罗米物联网平台 2、远程管理网关

--- a/ch4/ch4-1.md
+++ b/ch4/ch4-1.md
@@ -1,16 +1,34 @@
-# 4.1 罗米物联网平台配置
+# 4.1 罗米物联网平台
 
-单击”罗米物联网平台 “，填写相关参数，在右边的列中点”添加”，选择需要上传到平台的采集点。
+网关连接“罗米物联网平台”，需要先在平台上注册一个帐号。
 
-如图4-1所示。
+1.打开http://cloud.iotddc.com页面，在登录界面上点击“去注册",注册好后登陆平台。
+
+![罗米物联平台登陆注册](assets/罗米物联平台登陆注册.png)
+
+2.给需要接入”平台“的每个网关创建一个”接入序列号“（注意：这个序列号会配置进GC网关工程中，不要将一个序列号给多个网关使用，否则数据会出现问题）。
+
+在”接入序列号“页面中点”新增“按钮，会自动新生成一个序列号，点击列序号后的”修改“按钮，可以给序列号设置名称。
+
+![添加序列号](assets/添加序列号.png)
+
+
+
+3.回到GC网关工程中，单击”罗米物联网平台 “，填写相关参数（此处序列号填写我们在平台上创建的接入序列号），在右边的列中点”添加”，选择需要上传到平台的采集点。如图4-1所示。
 
 ![4-1 罗米物联平台参数配置](assets/4-1 罗米物联平台参数配置.png)
 
 <center>图4-1 罗米物联平台参数配置</center>
 
+4.将工程下载到网关中运行。
+
+![下载工程](assets/下载工程.png)
+
+5.完成上述操作后，可以在“平台”的”接入监控”页面中查看网关的状态，在“设备监控”中查看设备的状态、实时数据、历史数据和图表。
 
 
-**罗米物联网平台功能简介：**
+
+#### **罗米物联网平台功能简介：**
 
 　　**数据与监控：**同时支持PC端（网址：http://cloud.iotddc.com）和手机端（公众号：罗米测控）操作，可实时监控网关、设备、采集点的状态，查看实时和历史数据及生成图表。
 
