--- a/ch2/ch2-4.md
+++ b/ch2/ch2-4.md
@@ -1,40 +1,15 @@
-# 2.4 调试模式
+# 2.4 IP设置
 
-用户通过点击工具栏中的“调试模式”按钮进入网关调试。 
+用户可以通过GC修改在线LMGateway网口的网络参数。 
 
-GC的调试模式分为三部分：网关数据采集日志和报文输出、网关Ping测试、网关串口测试。 
+点击“网络设置”按钮，出现三个选项卡：IP设置、网关管理平台、防火墙，选中IP设置选项卡。
 
+可以切换联网方式：有线、WIFI、4G，选择有线或WIFI时可以配置相关的网络参数。
 
+![2-8 网络设置](assets/2-8 网络设置.png)
 
-## 2.4.1 网关数据采集日志和报文输出
+<center>图2-8 设置IP</center>
 
-用户可以查看网关运行日志及网关与设备交互的报文。
+点击“应用到网关”按钮，网关立即生效。（网口支持DHCP）
 
-![2-14 网关数据采集日志和报文输出](assets/2-14 网关数据采集日志和报文输出.png)
-
-<center>图2-14 网关数据采集日志和报文输出</center>
-
-
-
-## 2.4.2 网络测试
-
-用户输入目标IP，点击“确定”按钮，网关对目标IP执行ping操作。(默认进行5次ping操作)。
-
-点击“实时数据”选项卡、“运行日志”选项卡或者重启网关恢复正常采集、服务。
-
-![2-15 网络测试](assets/2-15 网络测试.png)
-
-<center>图2-15 网络测试</center>
-
-
-
-## 2.4.3 串口测试
-
-用户可以通过串口测试，设置网关串口，发送下方文本框中编辑的16进制报文，验证串口参数设置，查看报文收发。
-
-点击“实时数据”选项卡、“运行日志”选项卡或者重启网关恢复正常采集、服务。
-
-![2-16 串口测试](assets/2-16 串口测试.png)
-
-<center>图2-16 串口测试</center>
-
+WIFI配置：将SSID、密码、IP信息正确填写完成后，点击“保存”，将 usb 无线网卡插入到网关的 usb 端口，重新启动网关即可使用 usb 无线网卡。
