--- a/ch2/ch2-5.md
+++ b/ch2/ch2-5.md
@@ -10,11 +10,7 @@
 
 ![网关管理平台登陆](assets/网关管理平台登陆.png)
 
-2.在”网关管理“菜单中选择”添加网关“，在”基本信息“选项中输入一个合适的网关名称。
-
-![配置网关信息](assets/配置网关信息.png)
-
-3.在“网关属性”中点击“添加网关”按钮。
+2.在“网关管理”-->”网关列表“菜单中点击”添加网关“按钮，在弹出的窗口中设置好”网关名称“和“网关分组”，点“确定”按钮。
 
 ![添加网关](assets/添加网关.png)
 
