--- a/ch2/ch2-5.md
+++ b/ch2/ch2-5.md
@@ -10,7 +10,7 @@
 
 ![网关管理平台登陆](assets/网关管理平台登陆.png)
 
-2.在“网关管理”-->”网关列表“菜单中点击”添加网关“按钮，在弹出的窗口中设置好”网关名称“和“网关分组”，点“确定”按钮。
+2.在“网关管理”-->”网关列表“菜单中点击”添加网关“按钮，在弹出的窗口中设置好”网关名称“、“网关分组”和“描述信息”，点“确定”按钮。
 
 ![添加网关](assets/添加网关.png)
 
