--- a/ch2/ch2-5.md
+++ b/ch2/ch2-5.md
@@ -30,7 +30,7 @@
 
 ## 2.3.2 开始管理远程网关
 
-重新启动GC，在登录窗口中输入“网关管理平台”的用户名和密码（也可以此点“注册”按钮，操作步骤和之前描述一样），点击“登陆”按钮。
+重新启动GC，在登录窗口中输入“网关管理平台”的用户名和密码（也可以此点“注册”按钮，操作步骤和之前描述一样），点击“登录”按钮。
 
 ![远程管理网关登录](assets/远程管理网关登录.png)
 
