--- a/ch5/ch5-2.md
+++ b/ch5/ch5-2.md
@@ -20,7 +20,7 @@ Unicode：Metasys、Niagara 、etc.
 
 端口号：设置BACnet IP侦听端口号，默认值是47808。 
 
-绑定端口：指定BACnet IP服务绑定的网卡(windows版本需设置成eth0)。
+绑定端口：指定BACnet IP服务绑定的网卡（PC运行需设置成网卡对应的IP，下载工程时需设置成网关上实际使用的网口eth0或eth1）。
 
 BBMD： 勾选BBMD，设置为 BACnet 跨网段时使用，注册为外部设备，在“配置”对话框中填写注册为外部设备的上位机的 IP 地址。在对应的上位机处需要设置对应 BBMD 设备的 IP 地址为当前网关的 IP 地址。
 
