--- a/ch2/ch2-4.md
+++ b/ch2/ch2-4.md
@@ -13,3 +13,10 @@
 点击“应用到网关”按钮，网关立即生效。（网口支持DHCP）
 
 WIFI配置：将SSID、密码、IP信息正确填写完成后，点击“保存”，将 usb 无线网卡插入到网关的 usb 端口，重新启动网关即可使用 usb 无线网卡。
+
+
+
+   **414和403网关IP设置需要注意：**
+
+1. 网关的eth0为WAN口（跨网段通讯或连接Internet时使用），eth1为Lan口(同网段局域网通讯时使用)。
+2. 默认网关要和IP的网段一致才能生效
