--- a/ch12/ch12-7.md
+++ b/ch12/ch12-7.md
@@ -1,12 +1,13 @@
-# 12.7 应用工程
+# 12.7 数据服务
 
-工程配置完成后，可以进行两方面的操作：下载工程和PC端运行工程。
+单击选择“数据服务”下的“Modbus”，在右侧弹出页面中进行Modbus服务的配置。
 
-下载工程：将当前工程下载到指定的网关当中，使网关以当前工程配置运行；
+![12-7 Modbus服务](assets/12-7 Modbus服务.png)
 
-PC端运行工程：在PC端运行当前工程，使用PC的串口和网口进行数据采集和数据服务。在系统日志栏中会打印程序运行时输出 的日志和报文，便于用户在PC环境中调试项目。
+<center>图12-7 Modbus服务</center>
 
-![12-8 应用工程](assets/12-8 应用工程.png)
+在Modbus服务中，上方是Modbus服务的协议配置，下方为映射到Modbus服务上的数据点，映射的数据区、寄存器地址、数据类型以及字节序。
 
-<center>图12-8 应用工程</center>
 
+
+本示例为Modbus网关，在12-2章节“新建网关设备”时选择其他类型的网关，数据服务会有所区别，但是配置思路都是一致的，需要先进行协议方面的配置，然后进行数据点的映射（需要上传的数据点、数据点映射到的地址等）。
