--- a/ch12/ch12-3.md
+++ b/ch12/ch12-3.md
@@ -1,8 +1,8 @@
-# 12.3 新建通道
+# 12.3 网关新建通道数量
 
-右键单击“I/O点”标签，选择“新建通道”，输入通道名称，选择通道类型（串口/网口），选择采集驱动类型，这里我们选择“ModbusTCPClient”协议作为演示协议。通道的其他参数详见《罗米测控网关通讯协议说明》。如图12-4所示。
-
-![12-4 新建通道](assets/12-4 新建通道.png)
-
-<center>图12-4 新建通道</center>
+| 网关型号 | 串口支持通道数量 | 网口支持通道数量 |
+| :------: | :--------------: | :--------------: |
+|  1系列   |        6         |        6         |
+|  2系列   |    网关串口数    |        6         |
+|  4系列   |    网关串口数    |        32        |
 
