--- a/ch12/ch12-5.md
+++ b/ch12/ch12-5.md
@@ -1,13 +1,8 @@
-# 12.5 添加数据点
+# 12.5 新建设备
 
-左键单击选择需要新建数据点的设备，右侧会显示该设备下已编辑的数据点，可以在表格当中进行增删改。
+选择当前新建的通道，右键单击选择“新建设备”，输入设备名称和设备地址，如图12-5所示。
 
-可通过“导出配置”和“导入配置”将当前配置导出成Excel，用Excel软件配置完成后导入到配置工具当中；
+![12-5 新建设备](assets/12-5 新建设备.png)
 
-可通过“保存为模板文件”和“装载模板文件”将当前配置保存成模板文件，在当前工程或者其他工程中可直接导入保存的模板，方便批量配置。
+<center>图12-5 新建设备</center>
 
-![12-6 添加数据点](assets/12-6 添加数据点.jpg)
-
-<center>图12-6 添加数据点</center>
-
-协议表格的参数说明详见《罗米测控网关通讯协议说明》。
