--- a/ch12/ch12-3.md
+++ b/ch12/ch12-3.md
@@ -1,8 +1,8 @@
 # 12.3 网关新建通道数量
 
-| 网关型号 | 串口支持通道数量 | 网口支持通道数量 |
-| :------: | :--------------: | :--------------: |
-|  1系列   |    网关串口数    |        6         |
-|  2系列   |    网关串口数    |        6         |
-|  4系列   |    网关串口数    |        32        |
+| 网关  | 串口支持通道数量 | 网口支持通道数量 |
+| :---: | :--------------: | :--------------: |
+| 1系列 |    网关串口数    |        6         |
+| 2系列 |    网关串口数    |        6         |
+| 4系列 |    网关串口数    |        32        |
 
