--- a/ch6/ch6-2.md
+++ b/ch6/ch6-2.md
@@ -164,7 +164,7 @@
    {"operate":"reboot"}
 ```
 
-![6-7 mqtt 拓展主题](E:/githubbook/documents/ch6/assets/6-7%20mqtt%20%E6%8B%93%E5%B1%95%E4%B8%BB%E9%A2%98.png)
+![6-7 mqtt 拓展主题](assets/6-7%20mqtt%20%E6%8B%93%E5%B1%95%E4%B8%BB%E9%A2%98.png)
 
 <center>图6-7 mqtt拓展主题 </center>
 
