--- a/ch2/ch2-7.md
+++ b/ch2/ch2-7.md
@@ -2,7 +2,7 @@
 
 用户通过点击工具栏中的“调试模式”按钮进入网关调试。 
 
-GC的调试模式分为三部分：网关数据采集日志和报文输出、网关Ping测试、网关串口测试。 
+GC的调试模式分为三部分：网关数据采集日志和报文输出、网络测试、网关串口测试。 
 
 
 
@@ -16,15 +16,15 @@ GC的调试模式分为三部分：网关数据采集日志和报文输出、网
 
 
 
-## 2.7.2 Ping测试
+## 2.7.2 网络测试
 
 用户输入目标IP，点击“确定”按钮，网关对目标IP执行ping操作。(默认进行5次ping操作)。
 
 点击“实时数据”选项卡、“运行日志”选项卡或者重启网关恢复正常采集、服务。
 
-![2-15 ping测试](assets/2-15 ping测试.png)
+![2-15 网络测试](assets/2-15 网络测试.png)
 
-<center>图2-15 Ping测试</center>
+<center>图2-15 网络测试</center>
 
 
 
