--- a/ch5/ch5-4.md
+++ b/ch5/ch5-4.md
@@ -79,7 +79,7 @@
 
 ##### Postman截图：
 
-![real](E:/githubbook/documents/ch2/assets/real.png)
+![real](assets/real.png)
 
 
 
@@ -148,7 +148,7 @@
 
 ##### Postman截图：
 
-![deviceReal](E:/githubbook/documents/ch2/assets/deviceReal.png)
+![deviceReal](assets/deviceReal.png)
 
 
 
@@ -191,7 +191,7 @@ HTTP通讯成功返回结果都为true，指明网关接收到发送的写操作
 
 ##### Postman截图：
 
-![write](E:/githubbook/documents/ch2/assets/write.png)
+![write](assets/write.png)
 
 
 
@@ -248,7 +248,7 @@ HTTP通讯成功返回结果都为true，指明网关接收到发送的写操作
 
 ##### Postman截图：
 
-![history](E:/githubbook/documents/ch2/assets/history.png)
+![history](assets/history.png)
 
 
 
