--- a/ch6/ch6-7.md
+++ b/ch6/ch6-7.md
@@ -2,7 +2,7 @@
 
 HuaRun是华润云的物联网平台，提供设备连接上云，帮助物联网行业用户快速完成设备联网及行业应用集成。
 
-在配置GC中IoTDA页面之前，需要在华润云物联网平台配置获取连接参数（详细请参阅华润云相关说明）。
+在配置GC中HuaRun页面之前，需要在华润云物联网平台配置获取连接参数（详细请参阅华润云相关说明）。
 
 ![华润云（HuaRun）](assets/华润云（HuaRun）.png)
 
