--- a/ch6/ch6-8.md
+++ b/ch6/ch6-8.md
@@ -2,7 +2,7 @@
 
 WangYi是网易云的物联网平台，提供设备连接上云，帮助物联网行业用户快速完成设备联网及行业应用集成。
 
-在配置GC中IoTDA页面之前，需要在网易云的物联网平台配置获取连接参数（详细请参阅网易云相关说明）。
+在配置GC中WangYi页面之前，需要在网易云的物联网平台配置获取连接参数（详细请参阅网易云相关说明）。
 
 ![网易云（WangYi）](assets/网易云（WangYi）.png)
 
