--- a/ch2/ch2-8.md
+++ b/ch2/ch2-8.md
@@ -1,70 +1,40 @@
-# 2.8 WEB服务器
+# 2.8 调试模式
 
-网关自带 WEB 服务器，端口固定为 80。用户可以通过浏览器就登录到 WEB页面，在网页里可以修改查看实时数据、历史存储、事件记录和重启网关。 （推荐使用谷歌浏览器）
+用户通过点击工具栏中的“调试模式”按钮进入网关调试。 
 
-
-
-## 2.8.1 网页登录
-
-在浏览器中输入网关的 IP 地址，如图 2-17 所示。
-
-![2-17 网页登录](assets/2-17 网页登录.png)
-
-<center>图2-17 网页登录</center>
-
-密码初始默认为luomi，可通过配置工具中“更改密码”按钮进行修改。
+GC的调试模式分为三部分：网关数据采集日志和报文输出、网络测试、网关串口测试。 
 
 
 
-## 2.8.2 实时数据
+## 2.8.1 网关数据采集日志和报文输出
 
-在浏览器网页登录成功之后，会自动显示当前网关的实时数据。如图2-18所示。
+用户可以查看网关运行日志及网关与设备交互的报文。
 
-![2-18 实时数据](assets/2-18 实时数据.png)
+![2-14 网关数据采集日志和报文输出](assets/2-14 网关数据采集日志和报文输出.png)
 
-<center>图2-18 实时数据</center>
-
-
-
-## 2.8.3 历史数据
-
-用户可在历史数据页面每次查询一天的历史信息。在查询时需要当前网关开启了历史存储的功能。
-
-用户先选择需要查询的日期和存储点，点击“查询”按钮。
-
-![2-19 历史数据](assets/2-19 历史数据.png)
-
-<center>图2-19 历史数据</center>
+<center>图2-14 网关数据采集日志和报文输出</center>
 
 
 
-## 2.8.4 事件记录
+## 2.8.2 网络测试
 
-用户可在事件记录页面查询事件信息。
+用户输入目标IP，点击“确定”按钮，网关对目标IP执行ping操作。(默认进行5次ping操作)。
 
-用户选择需要查询的时间段，点击“查询”按钮。
+点击“实时数据”选项卡、“运行日志”选项卡或者重启网关恢复正常采集、服务。
 
-![2-20 事件记录](assets/2-20 事件记录.png)
+![2-15 网络测试](assets/2-15 网络测试.png)
 
-<center>图2-20 事件记录</center>
-
-
-
-## 2.8.5 设置IP
-
-用户可通过web页面设置网关IP。
-
-![2-21 设置IP](assets/2-21 设置IP.jpg)
-
-<center>图2-21 设置IP</center>
+<center>图2-15 网络测试</center>
 
 
 
-## 2.8.6 网关重启
+## 2.8.3 串口测试
 
-点击左侧“网关重启”菜单，在弹出的对话框中点击“确定”按钮，即可对当前网关进行重启操作。
+用户可以通过串口测试，设置网关串口，发送下方文本框中编辑的16进制报文，验证串口参数设置，查看报文收发。
 
-![2-22 网关重启](assets/2-22 网关重启.png)
+点击“实时数据”选项卡、“运行日志”选项卡或者重启网关恢复正常采集、服务。
 
-<center>图2-22 网关重启</center>
+![2-16 串口测试](assets/2-16 串口测试.png)
+
+<center>图2-16 串口测试</center>
 
