--- a/ch2/ch2-6.md
+++ b/ch2/ch2-6.md
@@ -1,5 +1,10 @@
-# 2.6 防火墙
+# 2.6 远程网关透传（PLC透传）
 
-在GC的“网关管理”中点需要配置防火墙的网关名称，然后点“网络设置”，在右边的对话框中点“防火墙”选项卡，通过”+ “，"-"按钮来增加和移除IP，设置完成后点”保存“按钮，在弹出的提示框中点”确定“按钮即可。
 
-![防火墙设置](assets/防火墙设置.png)
+
+　　远程网关透传，主要用于PLC透传，即使用PLC编程软件进行程序的在线监控、上传和下载等。
+
+　　在网关管理页面，选中需要建立透传的网关，点“远程网关透传”，在弹出的页面中设置好PLC设备的IP和端口等参数后点击“启动透传”按钮，启动正常后会弹出提示框显示出透传的IP和端口，将IP和端口设置进PLC编程软件里就可以远程操作PLC设备。
+
+![远程网关透传](assets/远程网关透传.png)
+
