--- a/ch6/ch6-12.md
+++ b/ch6/ch6-12.md
@@ -4,7 +4,7 @@
 
 　　Thingsboard支持提供设备连接的标准协议是MQTT，CoAP和HTTP，并支持云和本地部署。 它提供了30多个可自定义的小部件，允许您为大多数物联网用例构建最终用户自定义仪表板。thingsboard.io开源的物联网平台主要特点：实时数据可视化和远程设备控制自定义仪表板的30个可定制小部件可定制的规则，插件，小部件和传输实现允许监视客户端和提供服务器端设备属性。支持多租户安装即装即用。支持MQTT和HTTP协议的传输加密。
 
-　　在配置GC中ThingsBoard页面之前，需要在指令集的物联网平台配置获取连接参数（详细请参阅指令集相关说明）。
+　　在配置GC中ThingsBoard页面之前，需要在ThingsBoard物联网平台配置获取连接参数（详细请参阅ThingsBoard相关说明）。
 
 ![ThingsBoard](assets\ThingsBoard.png)
 
