--- a/ch2/ch2-1.md
+++ b/ch2/ch2-1.md
@@ -12,9 +12,9 @@
 
 **搜索网关** 
 
-将网络中的LMGateway全部搜索并列到在线网关列表中。
+首先确保网关和当前电脑的IP在同网段内，并可以PING通的情况下，单击“搜索网关”开始搜索。
 
-双击网关IP，弹出“网关信息”窗口中包含网关类型、软件版本、支持点数、网关备注、SN号，其中支持点数是指网关中的数据点低于支持点数时可以保证网关的运行效率。
+本地网关中会列出已搜索到的网关IP，双击网关IP，弹出“网关信息”窗口中包含网关类型、软件版本、支持点数、网关备注、SN号，其中支持点数是指网关中的数据点低于支持点数时可以保证网关的运行效率。
 
 可以修改网关的备注，完成后需要重启关网生效。“搜索网关”时会将备注内容显示在IP之前。
 
