--- a/ch2/ch2-6.md
+++ b/ch2/ch2-6.md
@@ -2,7 +2,9 @@
 
 
 
-　　远程网关透传，主要用于PLC透传，即使用PLC编程软件进行程序的在线监控、上传和下载等。
+　　远程网关透传，主要用于PLC透传，使用PLC编程软件，通过网关建立无线链路，对PLC程序进行在线监控、上传和下载等。
+
+​		只有2.3版本的网关和GC支持远程网关透传功能。
 
 　　在网关管理页面，选中需要建立透传的网关，点“远程网关透传”，在弹出的页面中设置好PLC设备的IP和端口等参数后点击“启动透传”按钮，启动正常后会弹出提示框显示出透传的IP和端口，将IP和端口设置进PLC编程软件里就可以远程操作PLC设备。
 
