--- a/ch6/ch6-2.md
+++ b/ch6/ch6-2.md
@@ -111,6 +111,11 @@
 - 离线数据发布：网关在mqtt断线时，实时数据会根据上传周期将数据缓存在网关中。在mqtt恢复连接时，网关会在离线主题依次发布缓存数据。
 
   - 网关设备缓存离线数据的容量为20M，当离线数据大于20M时，网关就会缓存新的一条离线数据时，删除最早的一条离线数据。 
+  
+  - 离线主题上传周期：单网口的建议设置5000以上，多网口的建议设置1000以上。
+  
+    ![连接主题](assets/离线主题.png)
+  
 - 查询数据主题：在配置界面中“查询数据订阅的主题”一项输入需要订阅的主题，当选中default.js时，网关订阅到如下格式的数据，就进行数据查询的操作，网关会在“查询数据发布的主题”发布此次查询到的结果。
 
 
