--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -9,11 +9,18 @@
 |         5          |       600        |
 |         30         |       1024       |
 
-6.1.1  IoT物联网关
+6.1.2  IoT物联网关
 
 | MQTT推送频率（秒） | 支持的采集点数据 |
 | :----------------: | :--------------: |
 |         1          |       4096       |
 
 
+
+6.1.3 离线主题推送频率建议
+
+| 网关网口数量 | 推送频率设置 |
+| :----------: | :----------: |
+|      1       |   5000以上   |
+|      2       |   1000以上   |
 
