--- a/ch6/ch6-2.md
+++ b/ch6/ch6-2.md
@@ -102,6 +102,14 @@
 
 ![控制主题](assets\控制主题.png)
 
+
+
+**支持添加多个MQTT客户端**
+
+当需要转发数据到多个MQTT服务器端时，可以单击“Mqtt Client”页面中的“+”号，在弹出的对话框中输入MQTT客户端的名称，单点“确定”，然后配置好MQTT服务器的连接参数即可。
+
+![多个MQTT客户端](assets/多个MQTT客户端.png)
+
 **拓展主题**
 
 - 连接主题：mqtt连接成功时，将填写的字符串发布到相应的主题。
