--- a/ch2/ch2-5.md
+++ b/ch2/ch2-5.md
@@ -2,7 +2,7 @@
 
 ## 2.5.1 网关管理平台
 
-网关管理平台可以让GC实现远程管理网关，平台网址为：http://hub.iotddc.com。
+网关管理平台可以让GC实现远程管理网关，平台网址为：http://hub.iotddc.com
 
 首先需要在网关管理平台添加一个网关，添加完成后会获得一个网关的ID，操作步骤如下：
 
