--- a/ch6/ch6-12.md
+++ b/ch6/ch6-12.md
@@ -1,77 +1,10 @@
-# 6.12 ThingsBoard
+# 6.12 指令集iLink
 
-　　ThingsBoard是一个开源平台，用于收集和可视化物联网设备的数据。可以将来自任意数量设备的数据发送到云服务器，在云服务器中可以通过可自定义的仪表板查看或共享。
+iLink 是指令集的物联网平台，提供设备连接上云，帮助物联网行业用户快速完成设备联网及行业应用集成。
 
-　　Thingsboard支持提供设备连接的标准协议是MQTT，CoAP和HTTP，并支持云和本地部署。 它提供了30多个可自定义的小部件，允许您为大多数物联网用例构建最终用户自定义仪表板。thingsboard.io开源的物联网平台主要特点：实时数据可视化和远程设备控制自定义仪表板的30个可定制小部件可定制的规则，插件，小部件和传输实现允许监视客户端和提供服务器端设备属性。支持多租户安装即装即用。支持MQTT和HTTP协议的传输加密。
+在配置GC中iLink页面之前，需要在指令集的物联网平台配置获取连接参数（详细请参阅指令集相关说明）。
 
-## 6.12.1 配置连接上传数据
+![指令集（iLink）](assets/指令集（iLink）.png)
 
-1.登陆ThingsBoard，点击左侧菜单中的“设备”，然后点“+”添加新设备，配置参考下图：
-
-![ThingsBoard-1](assets\ThingsBoard-1.png)
-
-2.添加好设备后，点设备后的"设备凭据图标"，在弹出的页面中复制设备令牌。
-
-![ThingsBoard-2](assets\ThingsBoard-2.png)
-
-3.在GC中打开工程，进入"ThingsBoard"配置页面，如下图如示配置。
-
-![ThingsBoard-3](assets\ThingsBoard-3.png)
-
-4.点击“PC模拟运行”，在“系统日志”中可以看到连接是否成功。
-
-![ThingsBoard-4](assets\ThingsBoard-4.png)
-
-5.数据上传成功后，设备列表中会出现已上传数据的设备，单击设备可以看到实时数据。
-
-![ThingsBoard-5](assets\ThingsBoard-5.png)
-
-![ThingsBoard-6](assets\ThingsBoard-6.png)
-
-## 6.12.2 控制设备
-
-1.单击菜单中的“仪表板库”，点击”+“号后在添加仪表板页面中输入标题，点击”添加“按钮。
-
-![ThingsBoard-7](assets\ThingsBoard-7.png)
-
-2.单击增加的仪表板，在弹出的页面中点”打开仪表板“。
-
-![ThingsBoard-8](assets\ThingsBoard-8.png)
-
-3.在页面中单击”编辑图标“，如下图所示。
-
-![ThingsBoard-9](assets\ThingsBoard-9.png)
-
-4.在页面中点”添加新的部件“。
-
-![ThingsBoard-10](assets\ThingsBoard-10.png)
-
-5.在页面中选择部件，如下图所示。
-
-![ThingsBoard-11](assets\ThingsBoard-11.png)
-
-6.在添加部件页面中，创建一个新的目标设备，点“创建一个新的”。
-
-![ThingsBoard-12](assets\ThingsBoard-12.png)
-
-7.在页面中填好相关信息，如下图所示。
-
-![ThingsBoard-13](assets\ThingsBoard-13.png)
-
-8.在高级选择卡中配置采集点的名称，如下图所示。
-
-![ThingsBoard-14](assets\ThingsBoard-14.png)
-
-8.完成后要一下勾标图，才能保存设置。
-
-![ThingsBoard-15](assets\ThingsBoard-15.png)
-
-9.拖动控制改变值后，这个值会写到设备中。
-
-![ThingsBoard-16](assets\ThingsBoard-16.png)
-
-10.用Modbus Slave模拟设备，可以看到值已写入成功。
-
-![ThingsBoard-17](assets\ThingsBoard-17.png)
-
+<center>指令集（iLink）配置页面</center>
 
