--- a/ch6/ch6-7.md
+++ b/ch6/ch6-7.md
@@ -1,10 +1,10 @@
-# 6.7 华润云HuaRun
+# 6.7 京东云 JD
 
-HuaRun是华润云的物联网平台，提供设备连接上云，帮助物联网行业用户快速完成设备联网及行业应用集成。
+JD是京东云的物联网平台，提供设备连接上云，帮助物联网行业用户快速完成设备联网及行业应用集成。
 
-在配置GC中HuaRun页面之前，需要在华润云物联网平台配置获取连接参数（详细请参阅华润云相关说明）。
+在配置GC中JD页面之前，需要在京东云的物联网平台配置获取连接参数（详细请参阅京东云相关说明）。
 
-![华润云（HuaRun）](assets/华润云（HuaRun）.png)
+![京东云（JD）](assets/京东云（JD）.png)
 
-<center>华润云（HuaRun）配置页面</center>
+<center>京东云（JD）配置页面</center>
 
