--- a/ch2/ch2-4.md
+++ b/ch2/ch2-4.md
@@ -14,7 +14,7 @@ GC可以将当前网关的配置文件上传到本地。
 
 <center>图2-8 设置IP</center>
 
-点击“应用到网关”按钮，网关立即生效。（网口支持DHCP）
+点击“保存”按钮会更新配置。（网口支持DHCP）
 
 WIFI配置：将SSID、密码、IP信息正确填写完成后，点击“保存”，将 usb 无线网卡插入到网关的 usb 端口，重新启动网关即可使用 usb 无线网卡。
 
