--- a/ch6/ch6-3.md
+++ b/ch6/ch6-3.md
@@ -4,7 +4,12 @@
 
 　　在mqtt离线时，网关会根据实时主题的上传周期将数据缓存起来。
 
-　　网关设备缓存离线数据的容量：IoTlite精简版物联网关：20M；IoT物联网关：２G。
+​		下表以100个缓存点举例，其他数据点规模供参考。
+
+|         网关          | 容量  | 采集点 | 上传周期 | 缓存天数 |
+| :-------------------: | :---: | :----: | :------: | :------: |
+| IoTlite精简版物联网关 |  20M  |  100   |   10秒   |    10    |
+|      IoT物联网关      | 2000M |  100   |   10秒   |   1000   |
 
 ​		当离线数据大于存储容量时，网关就会缓存新的一条离线数据时，删除最早的一条离线数据。
 
