--- a/ch6/ch6-1.md
+++ b/ch6/ch6-1.md
@@ -19,8 +19,8 @@
 
 6.1.3 离线主题推送频率建议
 
-| 网关网口数量 | 推送频率设置 |
-| :----------: | :----------: |
-|      1       |   5000以上   |
-|      2       |   1000以上   |
+|       网关类型        | 推送频率设置 |
+| :-------------------: | :----------: |
+| IoTlite精简版物联网关 |   5000以上   |
+|      IoT物联网关      |   1000以上   |
 
