--- a/ch3/ch3-3.md
+++ b/ch3/ch3-3.md
@@ -1,23 +1,37 @@
-# 3.3 用户点
+# 3.3 设备及点表编辑
 
-用户点属于可读可写的内部点。
+## 3.3.1 新建设备
 
-可用于JavaScript编程、作为一个控制信号等。 
+单击选中需要添加设备的通道，右键选择“新建设备”，如图2-3所示。
 
-1. 单击工程树上的“用户点”节点。 
-2. 点击“添加”按钮新增一个用户点。 
-3. 输入配置页面中唯一的名称，选择点类型（模拟量和离散量），添加该点的默认值。 
-4. 点击“保存”完成添加点。 
+![3-3 新建设备](assets/3-3 新建设备.png)
 
-具体步骤如图3-5所示。
+<center>图3-3 新建设备</center>
 
-![3-5 添加用户点](assets/3-5 添加用户点.png)
+编辑设备属性，点击确定生效。 
 
-<center>图3-5 添加用户点</center>
+- 设备名称：自定义，设备在该通道下的唯一标记，不可重复； 
+- 设备地址：设备的通讯地址，如Modbus RTU从站设备的站号（slave ID）, 645电能表的表号，BACnet的设备ID等； 
 
-表格中各字段说明如下：
 
-- 名称：必填项，可修改。在此页面中不能重复，为该点的唯一标识，如上图中名称为tag0001，在工程中该点的标识为user.tag0001
-- 描述：选填项，该点的描述信息
-- 数据类型：分为Analog(模拟量)，Discrete(离散量)和String(字符串)
-- 默认值：工程运行时该点的默认值，当数据类型为Analog时可填任意数，当数据类型为Discrete时只能填0或1
+
+## 3.3.2 批量复制新增
+
+同一个通道下的设备具有相同的协议属性，可以选中已编辑好的设备，右键“批量复制新增”，在弹出框中点击“+”按钮，编辑新设备的设备名称，设备地址。这个操作可以快速编辑完成一个通道下的若干设备。如图3-4所示。
+
+当设备特别多时，批量增加也比较费力，这时可以使用”导出“按钮，获得一个EXCEL文件，在EXCEL内进行批量操作后，再用”导入“按钮把内容导入进来即可。
+
+![3-4 批量复制新增](assets/3-4 批量复制新增.png)
+
+<center>图3-4 批量复制新增</center>
+
+
+
+## 3.3.3 编辑点表
+
+单击左侧工程树中的设备，进入设备采集点表编辑页面。如下图所示。
+
+![modbusTag点示例](assets/modbusTag点示例.png)
+
+<center>modbusTag点示例</center>
+
