--- a/ch3/ch3-5.md
+++ b/ch3/ch3-5.md
@@ -1,67 +1,33 @@
-# 3.5 系统点
+# 3.5 计算点
 
-系统点是只读的内部点，提供了网关的时间信息、网关与设备的通讯状态。 
+计算点属于只读的内部点，它的值是某个表达式的计算结果。
 
-![3-7 系统点](assets/3-7 系统点.png)
+该表达式的参数可以是Tag点或常数，在表达式中可以使用一些常用的计算方法，包括四则运算，逻辑运算，三角函数等。 
 
-<center>图3-8 系统点</center>
+通过使用计算点，可以做一些相对复杂的计算，例如将采集到的传感器数值通过换算得到实际的物理量，这样可以减少上位机的运算量，使得设备更加智能化。 
 
-**默认拥有的系统点：**
+每个计算点对应一个表达式，表达式可以有最多4个Tag点作为输入变量，为了方便起见，4个Tag点在表达式中分别使用A，B，C，D来表示。操作步骤如下： 
 
-START_TIME：程序启动的时间
+1. 单击工程树上的“计算点”节点。 
+2. 点击“添加”按钮新增一个计算点。 
+3. 输入配置页面中唯一的名称，如下图名称为tag0001，在工程中该点的标识为calculate.tag0001。
+4. 输入计算表达式，表达式中可使用的预设函数或运算符可以从表达式输入框上方的几个下拉框中选择，也 可以手动输入预设的函数或运算符。 
+5. 单击表达式变量的输入框左侧添加按钮，选择该变量对应的Tag点。 
+6. 点击“确定”完成添加点。 
 
-TIME：网关系统时间
+具体步骤如图3-6所示。
 
-TIME_SECOND：系统时间中的秒值，在工程中该点的标识为system.TIME_SECOND
+![3-6 添加计算点](assets/3-6 添加计算点.png)
 
-TIME_MINUTE：系统时间中的分值，在工程中该点的标识为system.TIME_MINUTE
-
-TIME_HOUR：系统时间中的小时值，在工程中该点的标识为system.TIME_HOUR
-
-TIME_DAY：系统时间中几号，在工程中该点的标识为system.TIME_DAY
-
-TIME_MONTH：系统时间中几月，在工程中该点的标识为system.TIME_MONTH
-
-TIME_YEAR：系统时间中的年，在工程中该点的标识为system.TIME_YEAR
-
-TIME_WDAY：系统时间中星期几，在工程中该点的标识为system.TIME_WDAY
-
-LONGITUDE：4G网络获取到的经度
-
-LATITUDE：4G网络获取到的纬度
-
-IMEI：4G网络GSM 模块的 IMEI (国际移动设备标识)
-
-IMSI：4G网络SIM 卡的IMSI (国际移动签署者标识)
-
-Cops：4G网络服务商
-
-Lac_ci：4G网络位置区编号_小区ID
-
-CSQ：4G网络信号质量
-
-STORAGE_SIZE：存储空间大小(单位:M)
-
-STORAGE_FREE_SIZE：空闲存储空间大小(单位:M)
-
-STORAGE_USAGE：存储空间使用率(%)
-
-MEMORY_SIZE：内存大小(单位:M)
-
-MEMORY_FREE_SIZE：空闲内存大小(单位:M)
-
-MEMORY_CACHED：已用缓存大小(单位:M)
-
-MEMORY_USAGE：内存使用率(%)
-
-CPU_USAGE：CPU使用率(%)
-
-ALL_NET：网口列表
-
-MQTT1(MQTT)：Mqtt 客户端状态，值为1表示连接成功，值为0表示连接失败
+<center>图3-6 添加计算点</center>
 
 
 
-**设备状态点**：
+**表达式验证**
 
-Device1_status：在I/O点中新建设备后，系统点页面会自动添加该设备的状态点。其中“Device1”为设备名称，该设备下的所有数据点中有任意一个采集成功，则该设备的状态点值为1 ；该设备下的所有数据点均采集失败，则该设备的状态点值为0。
+界面中有一个计算器样式的按钮![calculator](assets/calculator.png)，点击它可以打开表达式检查器，如下图所示。表达式检查器中A、B、C、D均已赋值。点击计算按钮![dengyu](assets/dengyu.png) 得到计算结果，直观地验证表达式是否正确。
+
+![3-7 表达式检查](assets/3-7 表达式检查.png)
+
+<center>图3-7 表达式检查</center>
+
