--- a/ch12/ch12-6.md
+++ b/ch12/ch12-6.md
@@ -1,13 +1,13 @@
-# 12.6 添加数据点
+# 12.6 数据服务
 
-左键单击选择需要新建数据点的设备，右侧会显示该设备下已编辑的数据点，可以在表格当中进行增删改。
+单击选择“数据服务”下的“Modbus”，在右侧弹出页面中进行Modbus服务的配置。
 
-可通过“导出配置”和“导入配置”将当前配置导出成Excel，用Excel软件配置完成后导入到配置工具当中；
+![12-7 Modbus服务](assets/12-7 Modbus服务.png)
 
-可通过“保存为模板文件”和“装载模板文件”将当前配置保存成模板文件，在当前工程或者其他工程中可直接导入保存的模板，方便批量配置。
+<center>图12-7 Modbus服务</center>
 
-![12-6 添加数据点](assets/12-6 添加数据点.jpg)
+在Modbus服务中，上方是Modbus服务的协议配置，下方为映射到Modbus服务上的数据点，映射的数据区、寄存器地址、数据类型以及字节序。
 
-<center>图12-6 添加数据点</center>
 
-协议表格的参数说明详见《罗米测控网关通讯协议说明》。
+
+本示例为Modbus网关，在12-2章节“新建网关设备”时选择其他类型的网关，数据服务会有所区别，但是配置思路都是一致的，需要先进行协议方面的配置，然后进行数据点的映射（需要上传的数据点、数据点映射到的地址等）。
