--- a/ch3/ch3-4.md
+++ b/ch3/ch3-4.md
@@ -1,33 +1,23 @@
-# 3.4 计算点
+# 3.4 用户点
 
-计算点属于只读的内部点，它的值是某个表达式的计算结果。
+用户点属于可读可写的内部点。
 
-该表达式的参数可以是Tag点或常数，在表达式中可以使用一些常用的计算方法，包括四则运算，逻辑运算，三角函数等。 
+可用于JavaScript编程、作为一个控制信号等。 
 
-通过使用计算点，可以做一些相对复杂的计算，例如将采集到的传感器数值通过换算得到实际的物理量，这样可以减少上位机的运算量，使得设备更加智能化。 
+1. 单击工程树上的“用户点”节点。 
+2. 点击“添加”按钮新增一个用户点。 
+3. 输入配置页面中唯一的名称，选择点类型（模拟量和离散量），添加该点的默认值。 
+4. 点击“保存”完成添加点。 
 
-每个计算点对应一个表达式，表达式可以有最多4个Tag点作为输入变量，为了方便起见，4个Tag点在表达式中分别使用A，B，C，D来表示。操作步骤如下： 
+具体步骤如图3-5所示。
 
-1. 单击工程树上的“计算点”节点。 
-2. 点击“添加”按钮新增一个计算点。 
-3. 输入配置页面中唯一的名称，如下图名称为tag0001，在工程中该点的标识为calculate.tag0001。
-4. 输入计算表达式，表达式中可使用的预设函数或运算符可以从表达式输入框上方的几个下拉框中选择，也 可以手动输入预设的函数或运算符。 
-5. 单击表达式变量的输入框左侧添加按钮，选择该变量对应的Tag点。 
-6. 点击“确定”完成添加点。 
+![3-5 添加用户点](assets/3-5 添加用户点.png)
 
-具体步骤如图3-6所示。
+<center>图3-5 添加用户点</center>
 
-![3-6 添加计算点](assets/3-6 添加计算点.png)
+表格中各字段说明如下：
 
-<center>图3-6 添加计算点</center>
-
-
-
-**表达式验证**
-
-界面中有一个计算器样式的按钮![calculator](assets/calculator.png)，点击它可以打开表达式检查器，如下图所示。表达式检查器中A、B、C、D均已赋值。点击计算按钮![dengyu](assets/dengyu.png) 得到计算结果，直观地验证表达式是否正确。
-
-![3-7 表达式检查](assets/3-7 表达式检查.png)
-
-<center>图3-7 表达式检查</center>
-
+- 名称：必填项，可修改。在此页面中不能重复，为该点的唯一标识，如上图中名称为tag0001，在工程中该点的标识为user.tag0001
+- 描述：选填项，该点的描述信息
+- 数据类型：分为Analog(模拟量)，Discrete(离散量)和String(字符串)
+- 默认值：工程运行时该点的默认值，当数据类型为Analog时可填任意数，当数据类型为Discrete时只能填0或1
